@@ -2,12 +2,11 @@ package no.sikt.nva.brage.migration.merger;
 
 import com.amazonaws.services.lambda.runtime.Context;
 import com.amazonaws.services.lambda.runtime.events.S3Event;
-import java.util.stream.Collectors;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.associatedartifacts.AssociatedArtifact;
 import no.unit.nva.model.associatedartifacts.AssociatedArtifactList;
-import no.unit.nva.model.associatedartifacts.file.AdministrativeAgreement;
 import no.unit.nva.model.associatedartifacts.file.File;
+import no.unit.nva.model.associatedartifacts.file.HiddenFile;
 import nva.commons.core.Environment;
 import nva.commons.core.StringUtils;
 import nva.commons.core.paths.UnixPath;
@@ -38,7 +37,7 @@ public class AssociatedArtifactMover {
         var associatedArtifacts = publication.getAssociatedArtifacts()
                                       .stream()
                                       .map(this::pushAssociatedArtifactToPersistedStorage)
-                                      .collect(Collectors.toList());
+                                      .toList();
         return new AssociatedArtifactList(associatedArtifacts);
     }
 
@@ -80,12 +79,11 @@ public class AssociatedArtifactMover {
                            .withMimeType(mimeType)
                            .withSize(size)
                            .withLegalNote(file.getLegalNote())
-                           .withAdministrativeAgreement(file.isAdministrativeAgreement())
                            .withUploadDetails(file.getUploadDetails());
-        if (file instanceof AdministrativeAgreement) {
-            return builder.buildUnpublishableFile();
+        if (file instanceof HiddenFile) {
+            return builder.buildHiddenFile();
         } else  {
-            return builder.buildPublishedFile();
+            return builder.buildOpenFile();
         }
     }
 
