@@ -7,15 +7,22 @@ import static nva.commons.apigateway.MediaTypes.APPLICATION_JSON_LD;
 import static nva.commons.core.attempt.Try.attempt;
 import static nva.commons.core.ioutils.IoUtils.stringToStream;
 import static org.apache.jena.rdf.model.ModelFactory.createDefaultModel;
+import com.apicatalog.jsonld.document.JsonDocument;
 import java.io.InputStream;
 import java.net.URI;
+import java.net.http.HttpResponse;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import no.unit.nva.PublicationMapper;
+import no.unit.nva.api.PublicationResponseElevatedUser;
+import no.unit.nva.expansion.utils.SearchIndexFrame;
+import no.unit.nva.identifiers.SortableIdentifier;
+import no.unit.nva.model.Publication;
 import no.unit.nva.publication.external.services.RawContentRetriever;
+import no.unit.nva.publication.service.impl.ResourceService;
+import nva.commons.core.StringUtils;
 import nva.commons.core.ioutils.IoUtils;
 import org.apache.jena.rdf.model.Model;
 import org.apache.jena.riot.Lang;
@@ -24,18 +31,25 @@ import org.apache.jena.vocabulary.RDF;
 
 public class ExpandedParentPublication {
 
-    public static final String FRAME = IoUtils.stringFromResources(Path.of("parentPublicationFrame.json"));
-    private static final String PUBLICATION_ONTOLOGY = "https://nva.sikt.no/ontology/publication#Publication";
-    private final RawContentRetriever uriRetriever;
+    private static final JsonDocument FRAME = SearchIndexFrame
+                                                  .getFrameWithContext(Path.of("parentPublicationFrame.json"));
+    private static final String PARENT_PUBLICATION_NOT_FOUND_S = "Parent publication not found %s";
 
-    public ExpandedParentPublication(RawContentRetriever uriRetriever) {
+    private static final String PUBLICATION_ONTOLOGY = "https://nva.sikt.no/ontology/publication#Publication";
+    private static final String ERROR_MESSAGE_FETCHING_REFERENCE = "Could not fetch external reference: %s";
+    private static final int ONE_HUNDRED = 100;
+    private static final int SUCCESS_FAMILY = 2;
+    private static final int CLIENT_ERROR_FAMILY = 4;
+    private final RawContentRetriever uriRetriever;
+    private final ResourceService resourceService;
+
+    public ExpandedParentPublication(RawContentRetriever uriRetriever, ResourceService resourceService) {
         this.uriRetriever = uriRetriever;
+        this.resourceService = resourceService;
     }
 
     public String getExpandedParentPublication(URI publicationId) {
-        return fetch(publicationId)
-                   .map(expandedPublication -> expandParent(publicationId, expandedPublication))
-                   .orElse(null);
+        return expandParent(publicationId, fetchParentPublication(publicationId));
     }
 
     private static void removePublicationTypeFromResource(URI id, Model model) {
@@ -65,13 +79,42 @@ public class ExpandedParentPublication {
 
     private Collection<? extends InputStream> fetchAll(List<URI> externalReferences) {
         return externalReferences.stream()
+                   .filter(this::isNotBlankUri)
                    .map(this::fetch)
-                   .flatMap(Optional::stream)
                    .map(IoUtils::stringToStream)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
-    private Optional<String> fetch(URI externalReference) {
-        return uriRetriever.getRawContent(externalReference, APPLICATION_JSON_LD.toString());
+    private boolean isNotBlankUri(URI uri) {
+        return StringUtils.isNotBlank(uri.toString());
+    }
+
+    private boolean processResponse(HttpResponse<String> response) {
+        if (response.statusCode() / ONE_HUNDRED == SUCCESS_FAMILY) {
+            return true;
+        } else if (response.statusCode() / ONE_HUNDRED == CLIENT_ERROR_FAMILY) {
+            return true;
+        }
+        throw new RuntimeException("Unexpected response " + response);
+    }
+
+    private String fetch(URI externalReference) {
+        return uriRetriever.fetchResponse(externalReference, APPLICATION_JSON_LD.toString())
+                   .filter(this::processResponse)
+                   .map(HttpResponse::body)
+                   .orElseThrow(() -> new RuntimeException(
+                       ERROR_MESSAGE_FETCHING_REFERENCE.formatted(externalReference)));
+    }
+
+    private String fetchParentPublication(URI publicationId) {
+        var publicationIdentifier = SortableIdentifier.fromUri(publicationId);
+        var publication = fetchPublication(publicationIdentifier);
+        return PublicationMapper.convertValue(publication, PublicationResponseElevatedUser.class).toJsonString();
+    }
+
+    private Publication fetchPublication(SortableIdentifier publicationIdentifier) {
+        return attempt(() -> resourceService.getPublicationByIdentifier(publicationIdentifier))
+                   .orElseThrow(failure -> new RuntimeException(
+                       PARENT_PUBLICATION_NOT_FOUND_S.formatted(publicationIdentifier)));
     }
 }
