@@ -1,12 +1,15 @@
 package no.unit.nva.expansion;
 
 import static java.util.Objects.nonNull;
+import static java.util.UUID.randomUUID;
 import static no.unit.nva.expansion.model.ExpandedTicket.extractIdentifier;
 import static no.unit.nva.hamcrest.DoesNotHaveEmptyValues.doesNotHaveEmptyValuesIgnoringFields;
 import static no.unit.nva.model.PublicationStatus.DRAFT;
 import static no.unit.nva.model.PublicationStatus.PUBLISHED;
+import static no.unit.nva.model.testing.PublicationGenerator.randomDegreePublication;
 import static no.unit.nva.model.testing.PublicationGenerator.randomOrganization;
 import static no.unit.nva.model.testing.PublicationGenerator.randomPublication;
+import static no.unit.nva.model.testing.associatedartifacts.AssociatedArtifactsGenerator.randomOpenFileWithLicense;
 import static no.unit.nva.publication.PublicationServiceConfig.API_HOST;
 import static no.unit.nva.publication.testing.http.RandomPersonServiceResponse.randomUri;
 import static no.unit.nva.testutils.RandomDataGenerator.randomElement;
@@ -24,31 +27,23 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.collection.IsIn.in;
 import static org.hamcrest.core.IsNot.not;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.net.URI;
-import java.net.URLEncoder;
-import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.commons.json.JsonUtils;
-import no.unit.nva.expansion.model.ExpandedDoiRequest;
-import no.unit.nva.expansion.model.ExpandedGeneralSupportRequest;
 import no.unit.nva.expansion.model.ExpandedMessage;
-import no.unit.nva.expansion.model.ExpandedOrganization;
 import no.unit.nva.expansion.model.ExpandedPerson;
 import no.unit.nva.expansion.model.ExpandedPublishingRequest;
 import no.unit.nva.expansion.model.ExpandedResource;
@@ -69,27 +64,28 @@ import no.unit.nva.model.PublicationStatus;
 import no.unit.nva.model.Username;
 import no.unit.nva.model.associatedartifacts.AssociatedArtifact;
 import no.unit.nva.model.associatedartifacts.AssociatedLink;
+import no.unit.nva.model.associatedartifacts.RelationType;
 import no.unit.nva.model.associatedartifacts.file.File;
-import no.unit.nva.model.associatedartifacts.file.PublishedFile;
-import no.unit.nva.model.associatedartifacts.file.UnpublishedFile;
+import no.unit.nva.model.associatedartifacts.file.PendingFile;
+import no.unit.nva.model.associatedartifacts.file.PendingOpenFile;
 import no.unit.nva.model.instancetypes.journal.AcademicArticle;
 import no.unit.nva.model.role.Role;
 import no.unit.nva.model.role.RoleType;
 import no.unit.nva.model.testing.PublicationGenerator;
 import no.unit.nva.model.testing.PublicationInstanceBuilder;
-import no.unit.nva.publication.external.services.UriRetriever;
 import no.unit.nva.publication.model.business.DoiRequest;
 import no.unit.nva.publication.model.business.Entity;
-import no.unit.nva.publication.model.business.FileForApproval;
 import no.unit.nva.publication.model.business.GeneralSupportRequest;
 import no.unit.nva.publication.model.business.Message;
 import no.unit.nva.publication.model.business.MessageStatus;
 import no.unit.nva.publication.model.business.PublishingRequestCase;
+import no.unit.nva.publication.model.business.PublishingWorkflow;
 import no.unit.nva.publication.model.business.Resource;
 import no.unit.nva.publication.model.business.TicketEntry;
 import no.unit.nva.publication.model.business.TicketStatus;
 import no.unit.nva.publication.model.business.UnpublishRequest;
 import no.unit.nva.publication.model.business.User;
+import no.unit.nva.publication.model.business.UserClientType;
 import no.unit.nva.publication.model.business.UserInstance;
 import no.unit.nva.publication.service.ResourcesLocalTest;
 import no.unit.nva.publication.service.impl.MessageService;
@@ -97,6 +93,8 @@ import no.unit.nva.publication.service.impl.ResourceService;
 import no.unit.nva.publication.service.impl.TicketService;
 import no.unit.nva.publication.testing.TypeProvider;
 import no.unit.nva.publication.ticket.test.TicketTestUtils;
+import no.unit.nva.publication.uriretriever.FakeUriResponse;
+import no.unit.nva.publication.uriretriever.FakeUriRetriever;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.apigateway.exceptions.NotFoundException;
@@ -104,6 +102,7 @@ import nva.commons.core.paths.UriWrapper;
 import nva.commons.logutils.LogUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -114,24 +113,32 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
 
     public static final URI ORGANIZATION =
         URI.create("https://api.dev.nva.aws.unit.no/cristin/person/myCristinId/myOrganization");
-    public static final UserInstance USER = UserInstance.create(new User("12345"), ORGANIZATION);
+    public static final UserInstance USER = UserInstance.create("12345", ORGANIZATION, ORGANIZATION,
+                                                                List.of(), ORGANIZATION);
     public static final ObjectMapper objectMapper = JsonUtils.dtoObjectMapper;
     private static final String FINALIZED_DATE = "finalizedDate";
+    private static final String TICKET_EVENT = "ticketEvent";
+    private static final String VIEWED_BY = "viewedBy";
     private static final String WORKFLOW = "workflow";
     private static final String ASSIGNEE = "assignee";
-    private static final String OWNERAFFILIATION = "ownerAffiliation";
+    private static final String OWNER_AFFILIATION = "ownerAffiliation";
     private static final String FINALIZED_BY = "finalizedBy";
     public static final String APPROVED_FILES = "approvedFiles";
     public static final String FILES_FOR_APPROVAL = "filesForApproval";
+    public static final String RESPONSIBILITY_AREA = "responsibilityArea";
+
     private ResourceExpansionService expansionService;
     private ResourceService resourceService;
     private MessageService messageService;
     private TicketService ticketService;
-    private UriRetriever personRetriever;
-    private UriRetriever orgRetriever;
+    private FakeUriRetriever fakeUriRetriever;
 
-    public static Stream<Class<?>> ticketTypeProvider() {
+    public static Stream<Named<Class<?>>> ticketTypeProvider() {
         return TypeProvider.listSubTypes(TicketEntry.class);
+    }
+
+    public static Stream<Class<?>> publicationInstanceProvider() {
+        return PublicationInstanceBuilder.listPublicationInstanceTypes().stream();
     }
 
     @BeforeEach
@@ -142,23 +149,29 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
 
     @ParameterizedTest
     @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
-    void shouldReturnExpandedTicketContainingTheOrganizationOfTheOwnersAffiliationAsIs(
+    void shouldReturnExpandedTicketContainingTheOrganizationOfTheOwnersResponsibilityAreaAsIs(
         Class<? extends TicketEntry> ticketType, PublicationStatus status) throws Exception {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        ticket.setOwnerAffiliation(randomUri());
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
-        assertThat(expandedTicket.getOrganization().id(), is(equalTo(ticket.getOwnerAffiliation())));
+        ticket.setResponsibilityArea(PublicationGenerator.randomUri());
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
+        assertThat(expandedTicket.getOrganization().id(), is(equalTo(ticket.getResponsibilityArea())));
     }
 
     @ParameterizedTest
     @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
     void shouldReturnExpandedTicketContainingFinalizedByValue(Class<? extends TicketEntry> ticketType,
-                                                              PublicationStatus status) throws ApiGatewayException {
+                                                              PublicationStatus status)
+        throws ApiGatewayException {
 
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        ticket.setResponsibilityArea(PublicationGenerator.randomUri());
         ticket.setFinalizedBy(new Username(randomString()));
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
 
         expansionService = mockedExpansionService();
 
@@ -175,15 +188,16 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                                       PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
-        var regeneratedTicket = toTicketEntry(expandedTicket);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
 
-        assertThat(regeneratedTicket, is(equalTo(ticket)));
         assertThat(ticket,
                    doesNotHaveEmptyValuesIgnoringFields(Set.of(WORKFLOW, ASSIGNEE, FINALIZED_BY,
-                                                               FINALIZED_DATE, OWNERAFFILIATION, APPROVED_FILES,
-                                                               FILES_FOR_APPROVAL)));
+                                                               FINALIZED_DATE, OWNER_AFFILIATION, APPROVED_FILES,
+                                                               FILES_FOR_APPROVAL,
+                                                               RESPONSIBILITY_AREA, TICKET_EVENT, VIEWED_BY)));
         var expectedPublicationId = constructExpectedPublicationId(publication);
         assertThat(expandedTicket.getPublication().getPublicationId(), is(equalTo(expectedPublicationId)));
     }
@@ -195,10 +209,12 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                           PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
 
         var message = messageService.createMessage(ticket, UserInstance.fromTicket(ticket), randomString());
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
         var messages = expandedTicket.getMessages();
         var expectedExpandedMessage = messageToExpandedMessage(message);
         assertThat(messages, contains(expectedExpandedMessage));
@@ -207,31 +223,37 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     @ParameterizedTest(name = "should return framed index document for resources. Instance type:{0}")
     @MethodSource("listPublicationInstanceTypes")
     void shouldReturnFramedIndexDocumentFromResource(Class<?> instanceType)
-        throws JsonProcessingException, NotFoundException {
+        throws JsonProcessingException, NotFoundException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(instanceType)
                                       .copy()
                                       .withEntityDescription(new EntityDescription())
                                       .build();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        Resource resourceUpdate = Resource.fromPublication(publication);
-        ExpandedResource indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        Resource resourceUpdate = Resource.fromPublication(resource);
+        ExpandedResource indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate, false);
         assertThat(indexDoc.fetchId(), is(not(nullValue())));
     }
 
     @ParameterizedTest(name = "should return framed index document containing license:{0}")
     @MethodSource("licenseProvider")
     void shouldReturnIndexDocumentContainingLicense(String licenseUri, LicenseType expectedLicense)
-        throws JsonProcessingException, NotFoundException {
-        var fileWithLicense = randomPublishedFile(licenseUri);
-        var associatedLink = new AssociatedLink(randomUri(), null, null);
-        var publication = PublicationGenerator.randomPublication()
+        throws JsonProcessingException, NotFoundException, BadRequestException {
+        var fileWithLicense = randomOpenFileWithLicense(URI.create(licenseUri));
+        var associatedLink = new AssociatedLink(randomUri(), null, null, RelationType.SAME_AS);
+        var publication = PublicationGenerator.randomPublication(AcademicArticle.class)
                                       .copy()
                                       .withAssociatedArtifacts(List.of(fileWithLicense, associatedLink))
                                       .build();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        var resourceUpdate = Resource.fromPublication(publication);
-        var indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        var resourceUpdate = Resource.fromPublication(resource);
+        var indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate, false);
         var licensesAsString = getLicenseForFile(indexDoc);
         var license = JsonUtils.dtoObjectMapper.readValue(licensesAsString, License.class);
 
@@ -239,16 +261,19 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     }
 
     @Test
-    void shouldReturnIndexDocumentWithoutLicenseWhenNoLicense() throws JsonProcessingException, NotFoundException {
-        var fileWithoutLicense = File.builder().buildUnpublishableFile();
-        var link = new AssociatedLink(randomUri(), null, null);
+    void shouldReturnIndexDocumentWithoutLicenseWhenNoLicense()
+        throws JsonProcessingException, NotFoundException, BadRequestException {
+        var fileWithoutLicense = File.builder().withIdentifier(randomUUID()).buildOpenFile();
+        var link = new AssociatedLink(randomUri(), null, null, RelationType.SAME_AS);
         var publication = PublicationGenerator.randomPublication()
                               .copy()
                               .withAssociatedArtifacts(List.of(fileWithoutLicense, link))
                               .build();
-
-        var resourceUpdate = Resource.fromPublication(publication);
-        var indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var resourceUpdate = Resource.fromPublication(resource);
+        var indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate, false);
         var license = indexDoc.asJsonNode().get("associatedArtifacts").get(0).get("license");
         assertThat(license, is(nullValue()));
     }
@@ -265,25 +290,19 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         return string;
     }
 
-    private File randomPublishedFile(String license) {
-        return File.builder()
-                   .withName(randomString())
-                   .withLicense(URI.create(license))
-                   .withIdentifier(UUID.randomUUID())
-                   .buildPublishedFile();
-    }
-
     @Test
     void shouldReturnIndexDocumentWithContextUri()
-        throws JsonProcessingException, NotFoundException {
+        throws JsonProcessingException, NotFoundException, BadRequestException {
 
         var publication = randomPublication(AcademicArticle.class)
                                       .copy()
                                       .withEntityDescription(new EntityDescription())
                                       .build();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        var resourceUpdate = Resource.fromPublication(publication);
-        var indexDoc = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        var indexDoc = (ExpandedResource) expansionService.expandEntry(Resource.fromPublication(resource), true);
         assertThat(indexDoc.getAllFields().get("@context"),
                    is(equalTo("https://api.dev.nva.aws.unit.no/publication/context")));
     }
@@ -291,15 +310,18 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     @Test
     void shouldIncludedOnlyMessagesAssociatedToExpandedTicket() throws ApiGatewayException, JsonProcessingException {
         var publication = persistDraftPublicationWithoutDoi();
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var owner = UserInstance.fromPublication(publication);
 
         var ticketToBeExpanded = TicketEntry.requestNewTicket(publication, GeneralSupportRequest.class)
+                                     .withOwner(UserInstance.fromPublication(publication).getUsername())
                                      .persistNewTicket(ticketService);
+        FakeUriResponse.setupFakeForType(ticketToBeExpanded, fakeUriRetriever);
 
         var message = messageService.createMessage(ticketToBeExpanded, owner, randomString());
         var expectedExpandedMessage = messageToExpandedMessage(message);
         var unexpectedMessages = messagesOfDifferentTickets(publication, owner, GeneralSupportRequest.class);
-        var expandedEntry = (ExpandedTicket) expansionService.expandEntry(ticketToBeExpanded);
+        var expandedEntry = (ExpandedTicket) expansionService.expandEntry(ticketToBeExpanded, false);
         assertThat(expandedEntry.getMessages(), hasItem(expectedExpandedMessage));
         assertThat(unexpectedMessages, everyItem(not(in(expandedEntry.getMessages()))));
     }
@@ -308,15 +330,20 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldExpandAssociatedTicketAndNotTheMessageItselfWhenNewMessageArrivesForExpansion()
         throws ApiGatewayException, JsonProcessingException {
         var publication = persistDraftPublicationWithoutDoi();
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var owner = UserInstance.fromPublication(publication);
 
-        var ticketToBeExpanded = TicketEntry.requestNewTicket(publication, GeneralSupportRequest.class)
-                                     .persistNewTicket(ticketService);
+        var generalSupportRequest = GeneralSupportRequest.create(Resource.fromPublication(publication),
+                                                              UserInstance.fromPublication(publication));
+        generalSupportRequest.setViewedBy(Set.of(owner.getUser()));
+        var ticketToBeExpanded = generalSupportRequest.persistNewTicket(ticketService);
+
+        FakeUriResponse.setupFakeForType(ticketToBeExpanded, fakeUriRetriever);
 
         var messageThatWillLeadToTicketExpansion = messageService.createMessage(ticketToBeExpanded, owner,
                                                                                 randomString());
         var expectedExpandedMessage = messageToExpandedMessage(messageThatWillLeadToTicketExpansion);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(messageThatWillLeadToTicketExpansion);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(messageThatWillLeadToTicketExpansion, false);
         assertThat(expandedTicket.getMessages(), hasItem(expectedExpandedMessage));
     }
 
@@ -326,8 +353,11 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         throws ApiGatewayException, JsonProcessingException {
 
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
 
         var expectedTitle = publication.getEntityDescription().getMainTitle();
         assertThat(expandedTicket.getPublication().getTitle(), is(equalTo(expectedTitle)));
@@ -337,7 +367,7 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldThrowIfUnsupportedType() {
         var unsupportedImplementation = mock(Entity.class);
         assertThrows(UnsupportedOperationException.class,
-                     () -> expansionService.expandEntry(unsupportedImplementation));
+                     () -> expansionService.expandEntry(unsupportedImplementation, false));
     }
 
     @ParameterizedTest
@@ -346,9 +376,13 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                                 PublicationStatus status)
         throws Exception {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        ticket.setOwnerAffiliation(randomUri());
-        var expectedOrgId = ticket.getOwnerAffiliation();
+        ticket.setResponsibilityArea(PublicationGenerator.randomUri());
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
+        var expectedOrgId = ticket.getResponsibilityArea();
         var actualAffiliation  = expansionService.getOrganization(ticket).id();
         assertThat(actualAffiliation, is(equalTo(expectedOrgId)));
     }
@@ -356,32 +390,18 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     @ParameterizedTest
     @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
     void shouldUseResourceOwnerAffiliationWhenTicketHasNoOwnerAffiliation(Class<? extends TicketEntry> ticketType,
-                                                                          PublicationStatus status)
-        throws Exception {
-        var publication = TicketTestUtils.createPersistedPublicationWithOwner(status, USER, resourceService);
+                                                                          PublicationStatus status) throws Exception {
+        var userInstance = new UserInstance(randomString(), randomUri(), randomUri(), randomUri(), null, null,
+                                            UserClientType.EXTERNAL);
+        var publication = TicketTestUtils.createPersistedPublicationWithOwner(status, userInstance, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
         var expectedOrgId = publication.getResourceOwner().getOwnerAffiliation();
         var actualAffiliation  = expansionService.getOrganization(ticket).id();
         assertThat(actualAffiliation, is(equalTo(expectedOrgId)));
-    }
-
-    @ParameterizedTest
-    @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
-    void shouldGetOrganizationPartOfsForAffiliations(Class<? extends TicketEntry> ticketType,
-                                                       PublicationStatus status)
-        throws ApiGatewayException {
-        var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
-        var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-
-        var expectedPartOf = List.of(
-            new ExpandedOrganization(
-                URI.create("https://api.dev.nva.aws.unit.no/cristin/organization/20754.0.0.0"),
-                "20754.0.0.0",
-                null)
-        );
-        var partOf = expansionService.getOrganization(ticket).partOf();
-
-        assertThat(partOf, is(equalTo(expectedPartOf)));
     }
 
     @ParameterizedTest
@@ -390,7 +410,10 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                      PublicationStatus status)
         throws ApiGatewayException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
 
         var publicationOwnerAffiliationId = publication.getResourceOwner().getOwnerAffiliation();
         var expectedIdentifier = UriWrapper.fromUri(publicationOwnerAffiliationId).getLastPathElement();
@@ -417,7 +440,9 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldExpandTicketOwner(Class<? extends TicketEntry> ticketType, PublicationStatus status)
         throws ApiGatewayException {
         var publication = TicketTestUtils.createPersistedPublicationWithOwner(status, USER, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
 
         expansionService = mockedExpansionService();
 
@@ -432,8 +457,9 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldExpandAssigneeWhenPresent(Class<? extends TicketEntry> ticketType, PublicationStatus status)
         throws ApiGatewayException {
         var publication = TicketTestUtils.createPersistedPublicationWithOwner(status, USER, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = ticketWithAssignee(ticketType, publication);
-
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
         expansionService = mockedExpansionService();
 
         var assignee = ticket.getAssignee().getValue();
@@ -462,7 +488,8 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         final var logAppender = LogUtils.getTestingAppender(ResourceExpansionServiceImpl.class);
 
         var entity = findEntity(type);
-        expansionService.expandEntry(entity);
+
+        expansionService.expandEntry(entity, false);
 
         assertThat(logAppender.getMessages(), containsString(type + ": " + entity.getIdentifier().toString()));
     }
@@ -473,8 +500,12 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         Class<? extends TicketEntry> ticketType, PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
         assertThat(expandedTicket.getStatus(), is(equalTo(ExpandedTicketStatus.NEW)));
     }
 
@@ -484,9 +515,13 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                                         PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
         ticket.setStatus(TicketStatus.CLOSED);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
         assertThat(expandedTicket.getStatus(), is(equalTo(ExpandedTicketStatus.CLOSED)));
     }
 
@@ -496,9 +531,13 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                                            PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
         ticket.setStatus(TicketStatus.COMPLETED);
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
         assertThat(expandedTicket.getStatus(), is(equalTo(ExpandedTicketStatus.COMPLETED)));
     }
 
@@ -508,30 +547,40 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                                                            PublicationStatus status)
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+
         var viewedBySet = Set.of(new User(randomString()));
         ticket.setViewedBy(viewedBySet);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
 
         expansionService = mockedExpansionService();
 
-        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket);
+        var expandedTicket = (ExpandedTicket) expansionService.expandEntry(ticket, false);
         var viewedBy = ticket.getViewedBy();
         var expectedExpandedViewedBy = getExpectedExpandedPerson(new User(viewedBy.toString()));
-        assert expandedTicket.getViewedBy().contains(expectedExpandedViewedBy);
+        assert expandedTicket.getViewedBy().stream()
+                   .map(ExpandedPerson::username)
+                   .anyMatch(i -> i.equals(expectedExpandedViewedBy.username()));
         var expectedExpandedViewedBySet = Set.of(expectedExpandedViewedBy);
         assertThat(expandedTicket.getViewedBy(), is(equalTo(expectedExpandedViewedBySet)));
     }
 
     @Test
     void shouldReturnExpandedResourceWithEntityDescriptionForPublicationWithContributorWithoutId()
-        throws JsonProcessingException, NotFoundException {
+        throws JsonProcessingException, NotFoundException, BadRequestException {
         var publicationJsonString = stringFromResources(Path.of("publication_without_contributor_id_sample.json"));
 
         var publication = objectMapper.readValue(publicationJsonString, Publication.class);
-        var resourceUpdate = Resource.fromPublication(publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var resourceUpdate = Resource.fromPublication(resource);
 
         expansionService = mockedExpansionService();
-        var expandedResource = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        var expandedResource = (ExpandedResource) expansionService.expandEntry(resourceUpdate, false);
         var actualEntityDescription = expandedResource.asJsonNode().at("/entityDescription").toString();
 
         assertThat(actualEntityDescription, is(not(equalTo(""))));
@@ -539,7 +588,7 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
 
     @Test
     void shouldReturnExpandedResourceWithContributorForPublicationWithContributorWithoutIdOrAffiliation()
-        throws JsonProcessingException, NotFoundException {
+        throws JsonProcessingException, NotFoundException, BadRequestException {
         var contributorWithoutIdOrAffiliation = createContributor(randomElement(Role.values()), null, randomString(),
                                                                   Collections.emptyList(), 1);
         var entityDescription = createEntityDescriptionWithContributor(contributorWithoutIdOrAffiliation);
@@ -547,23 +596,46 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                               .copy()
                               .withEntityDescription(entityDescription)
                               .build();
-        var resourceUpdate = Resource.fromPublication(publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var resourceUpdate = Resource.fromPublication(resource);
 
         expansionService = mockedExpansionService();
-        var expandedResource = (ExpandedResource) expansionService.expandEntry(resourceUpdate);
+        var expandedResource = (ExpandedResource) expansionService.expandEntry(resourceUpdate, false);
         var actualContributors = extractContributors(expandedResource);
         assertThat(actualContributors, containsInAnyOrder(List.of(contributorWithoutIdOrAffiliation).toArray()));
     }
 
+    @ParameterizedTest
+    @MethodSource("publicationInstanceProvider")
+    void shouldReturnDataThatIsFullyDefinedInJsonLdContext(Class<?> instanceType)
+        throws NotFoundException, JsonProcessingException, BadRequestException {
+        var publication = PublicationGenerator.randomPublication(instanceType);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        expansionService = mockedExpansionService();
+        var expandedResource = (ExpandedResource) expansionService.expandEntry(Resource.fromPublication(resource),
+                                                                               false);
+        var json = expandedResource.asJsonNode();
+        json.remove("@context");
+        JsonPropertyScraper.getAllProperties(json).forEach(item -> assertFalse(item.contains("http")));
+        JsonPropertyScraper.getAllProperties(json).forEach(item -> assertFalse(item.contains("@")));
+    }
+
     @Test
     void shouldReturnExpandedResourceWithCorrectNumberOfContributorsForPublicationWithSamePersonInDifferentRoles()
-        throws JsonProcessingException, NotFoundException {
+        throws JsonProcessingException, NotFoundException, BadRequestException {
         var id = randomUri();
         var publication = getPublicationWithSamePersonInDifferentContributorRoles(id);
-        var resourceUpdate = Resource.fromPublication(publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var resourceUpdate = Resource.fromPublication(resource);
 
         expansionService = mockedExpansionService();
-        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate).toJsonString();
+        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate, false).toJsonString();
 
         var regeneratedPublication = objectMapper.readValue(expandedResourceAsJson, Publication.class);
 
@@ -574,35 +646,38 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     @Test
     void shouldExpandApprovedFilesForPublishingRequest()
         throws ApiGatewayException, JsonProcessingException {
-        var publication = TicketTestUtils.createPersistedPublicationWithUnpublishedFiles(PUBLISHED, resourceService);
+        var publication = TicketTestUtils.createPersistedPublicationWithPendingOpenFile(PUBLISHED, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var ticket = createCompletedTicketAndPublishFiles(publication);
-        var expandedTicket = (ExpandedPublishingRequest) expansionService.expandEntry(ticket);
-        var regeneratedTicket = (PublishingRequestCase) toTicketEntry(expandedTicket);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+        var expandedTicket = (ExpandedPublishingRequest) expansionService.expandEntry(ticket, false);
 
-        assertThat(regeneratedTicket, is(equalTo(ticket)));
-
-        var publishedFilesFromPublication = resourceService.getPublication(publication)
+        var publishedFilesFromPublication = publication
                                                 .getAssociatedArtifacts().stream()
-                                                .filter(PublishedFile.class::isInstance)
+                                                .map(File.class::cast)
+                                                .map(File::getIdentifier)
                                                 .collect(Collectors.toSet());
-        var publishedFilesFromExpandedPublishingRequest = expandedTicket.getApprovedFiles();
+        var publishedFilesFromExpandedPublishingRequest = expandedTicket.getApprovedFiles()
+                                                              .stream().map(File::getIdentifier).toList();
 
-        assertThat(publishedFilesFromPublication, 
+        assertThat(publishedFilesFromPublication,
                    containsInAnyOrder(publishedFilesFromExpandedPublishingRequest.toArray()));
     }
 
     @Test
     void shouldExpandFilesForApprovalForPublishingRequest() throws ApiGatewayException, JsonProcessingException {
-        var publication = TicketTestUtils.createPersistedPublicationWithUnpublishedFiles(PUBLISHED, resourceService);
-        var ticket = TicketTestUtils.createPersistedTicket(publication, PublishingRequestCase.class, ticketService);
-        var expandedTicket = (ExpandedPublishingRequest) expansionService.expandEntry(ticket);
+        var publication = TicketTestUtils.createPersistedPublicationWithPendingOpenFile(PUBLISHED, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+        var ticket = persistPublishingRequestContainingExistingUnpublishedFiles(publication);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
+        var expandedTicket = (ExpandedPublishingRequest) expansionService.expandEntry(ticket, false);
         var regeneratedTicket = (PublishingRequestCase) toTicketEntry(expandedTicket);
 
         assertThat(regeneratedTicket, is(equalTo(ticket)));
 
-        var expectedFilesForApproval = resourceService.getPublication(publication)
+        var expectedFilesForApproval = resourceService.getPublicationByIdentifier(publication.getIdentifier())
                                                 .getAssociatedArtifacts().stream()
-                                                .filter(UnpublishedFile.class::isInstance)
+                                                .filter(PendingOpenFile.class::isInstance)
                                                 .toArray();
         var filesForApproval = expandedTicket.getFilesForApproval();
 
@@ -613,9 +688,10 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldExpandPublicationWithNviStatusWhenPublicationIsReportedNviCandidate()
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(PUBLISHED, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var resourceUpdate = Resource.fromPublication(publication);
         var expansionService = expansionServiceReturningNviCandidate(publication, nviCandidateResponse(), 200);
-        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate).toJsonString();
+        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate, false).toJsonString();
         var json = JsonUtils.dtoObjectMapper.readTree(expandedResourceAsJson);
         var nviStatusNode = json.get(ScientificIndex.SCIENTIFIC_INDEX_FIELD);
 
@@ -627,9 +703,10 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void shouldNotAddNviStatusToPublicationWhenNotFoundResponseFromNvi()
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(PUBLISHED, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var resourceUpdate = Resource.fromPublication(publication);
         var expansionService = expansionServiceReturningNviCandidate(publication, nviCandidateResponse(), 404);
-        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate).toJsonString();
+        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate, false).toJsonString();
         var json = JsonUtils.dtoObjectMapper.readTree(expandedResourceAsJson);
 
         assertThat(json.get("nviStatus"), is(nullValue()));
@@ -639,12 +716,13 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     void doiShouldBeExpandedAsUriWhenMultipleDoiOccurrencesInPublication()
         throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublicationWithDoi(PUBLISHED, resourceService);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
         var doi = publication.getEntityDescription().getReference().getDoi();
-        publication.getAssociatedArtifacts().add(new AssociatedLink(doi, randomString(), randomString()));
+        publication.getAssociatedArtifacts().add(new AssociatedLink(doi, randomString(), randomString(), RelationType.SAME_AS));
         var publicationWithIdenticalDoiValues = resourceService.updatePublication(publication);
         var resourceUpdate = Resource.fromPublication(publicationWithIdenticalDoiValues);
         var expansionService = expansionServiceReturningNviCandidate(publication, nviCandidateResponse(), 404);
-        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate).toJsonString();
+        var expandedResourceAsJson = expansionService.expandEntry(resourceUpdate, false).toJsonString();
         var json = JsonUtils.dtoObjectMapper.readTree(expandedResourceAsJson);
 
         var expandedDoi = json.at("/entityDescription/reference/doi");
@@ -658,75 +736,59 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         var resourceUpdate = Resource.fromPublication(publication);
         var expansionService = expansionServiceReturningNviCandidate(publication, randomString(), 200);
 
-        assertThrows(ExpansionException.class, () -> expansionService.expandEntry(resourceUpdate));
+        assertThrows(ExpansionException.class, () -> expansionService.expandEntry(resourceUpdate, false));
     }
 
     @Test
     void shouldExpandUnpublishRequest() throws ApiGatewayException, JsonProcessingException {
         var publication = TicketTestUtils.createPersistedPublication(PUBLISHED, resourceService);
-        resourceService.unpublishPublication(publication);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+        resourceService.unpublishPublication(publication, UserInstance.fromPublication(publication));
         var ticket = TicketTestUtils.createPersistedTicket(publication, UnpublishRequest.class, ticketService);
-        var expandedTicket = expansionService.expandEntry(ticket);
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+        var expandedTicket = expansionService.expandEntry(ticket, false);
 
         assertThat(expandedTicket, instanceOf(ExpandedUnpublishRequest.class));
     }
 
     private ResourceExpansionServiceImpl expansionServiceReturningNviCandidate(Publication publication,
                                                                                String responseBody, int statusCode) {
-        var mockUriRetriver = mock(UriRetriever.class);
-        var response = mock(HttpResponse.class);
-        when(response.statusCode()).thenReturn(statusCode);
-        when(response.body()).thenReturn(responseBody);
-        when(mockUriRetriver.fetchResponse(fetchNviCandidateUri(publication), "application/json"))
-            .thenReturn(Optional.of(response));
+
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+        FakeUriResponse.setUpNviResponse(fakeUriRetriever, statusCode, publication, responseBody);
+
         return new ResourceExpansionServiceImpl(getResourceServiceBuilder().build(),
-                                                            new TicketService(client, mockUriRetriver),
-                                                            mockUriRetriver,
-                                                            mockUriRetriver);
+                                                            new TicketService(client, fakeUriRetriever),
+                                                            fakeUriRetriever,
+                                                            fakeUriRetriever);
     }
 
     private String nviCandidateResponse() {
         return """
                 {
-                    "type": "NviCandidate",
-                    "status": "Reported",
-                    "period": {
-                        "type": "NviReportingPeriod",
-                        "id": "https://api.sandbox.nva.aws.unit.no/scientific-index/period/2024",
-                        "year": "2024"
-                    }
+                    "reportStatus": {
+                        "status": "REPORTED",
+                        "description": "Reported in closed period"
+                    },
+                    "period": "2024"
                 }
                 """;
     }
 
-    private URI fetchNviCandidateUri(Publication publication) {
-        var uri = UriWrapper.fromHost(API_HOST)
-                   .addChild("scientific-index")
-                   .addChild("candidate")
-                   .addChild("publication")
-                   .getUri();
-        return URI.create(uri + "/" + URLEncoder.encode(constructExpectedPublicationId(publication).toString(),
-                                                        StandardCharsets.UTF_8));
-    }
-
     private TicketEntry createCompletedTicketAndPublishFiles(Publication publication) throws ApiGatewayException {
-        var ticket = TicketTestUtils.createCompletedTicket(publication, PublishingRequestCase.class, ticketService);
-        publishFiles(publication);
+        var ticket = (PublishingRequestCase) TicketTestUtils.createCompletedTicket(
+            publication, PublishingRequestCase.class, ticketService);
+        ticket.withFilesForApproval(TicketTestUtils.getFilesForApproval(publication)).approveFiles()
+            .publishApprovedFiles(resourceService);
         return ticket;
     }
 
-    private void publishFiles(Publication publication) {
-        var updatedPublication = publication.copy()
-                                     .withAssociatedArtifacts(convertUnpublishedFilesToPublished(publication))
-                                     .build();
-        resourceService.updatePublication(updatedPublication);
-    }
 
-    private static List<AssociatedArtifact> convertUnpublishedFilesToPublished(Publication publication) {
+    private static List<AssociatedArtifact> convertPendingFilesToAccepted(Publication publication) {
         return publication.getAssociatedArtifacts().stream()
-                   .filter(UnpublishedFile.class::isInstance)
-                   .map(UnpublishedFile.class::cast)
-                   .map(UnpublishedFile::toPublishedFile)
+                   .filter(PendingFile.class::isInstance)
+                   .map(PendingFile.class::cast)
+                   .map(PendingFile::approve)
                    .collect(Collectors.toList());
     }
 
@@ -742,6 +804,14 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         return entityDescription;
     }
 
+    private TicketEntry persistPublishingRequestContainingExistingUnpublishedFiles(Publication publication)
+        throws ApiGatewayException {
+        return PublishingRequestCase.create(Resource.fromPublication(publication),
+                                            UserInstance.fromPublication(publication),
+                                            PublishingWorkflow.REGISTRATOR_PUBLISHES_METADATA_ONLY)
+                   .persistNewTicket(ticketService);
+    }
+
     private static List<Contributor> extractContributorsWithId(URI id, Publication publication) {
         return publication.getEntityDescription()
                    .getContributors()
@@ -749,7 +819,7 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                    .filter(contributor -> nonNull(contributor.getIdentity()))
                    .filter(contributor -> nonNull(getId(contributor)))
                    .filter(contributor -> getId(contributor).equals(id))
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private static URI getId(Contributor contributor) {
@@ -784,7 +854,7 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     @SuppressWarnings("unchecked")
     private static Class<? extends TicketEntry> someOtherTicketTypeBesidesDoiRequest(
         Class<? extends TicketEntry> ticketType) {
-        return (Class<? extends TicketEntry>) ticketTypeProvider().filter(
+        return (Class<? extends TicketEntry>) ticketTypeProvider().map(Named::getPayload).filter(
             type -> !ticketType.equals(type) && !type.equals(DoiRequest.class)).findAny().orElseThrow();
     }
 
@@ -837,7 +907,12 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
                    .withOwner(message.getOwner())
                    .withResourceTitle(message.getResourceTitle())
                    .withCustomerId(message.getCustomerId())
-                   .withSender(ExpandedPerson.defaultExpandedPerson(message.getSender()))
+                   .withSender(new ExpandedPerson.Builder().withFirstName("someFirstName")
+                                   .withLastName("someLastName")
+                                   .withUser(message.getSender())
+                                   .withPreferredLastName("somePreferredLastName")
+                                   .withPreferredFirstName("somePreferredFirstName")
+                                   .build())
                    .withText(message.getText())
                    .withTicketIdentifier(message.getTicketIdentifier())
                    .withResourceIdentifier(message.getResourceIdentifier())
@@ -848,7 +923,10 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     private Entity findEntity(String type) throws ApiGatewayException {
         var publication = TicketTestUtils.createPersistedPublicationWithOwner(PUBLISHED, USER, resourceService);
         publication.setEntityDescription(new EntityDescription());
+        FakeUriResponse.setupFakeForType(publication, fakeUriRetriever, resourceService);
+
         var ticket = TicketTestUtils.createPersistedTicket(publication, GeneralSupportRequest.class, ticketService);
+        FakeUriResponse.setupFakeForType(ticket, fakeUriRetriever);
 
         return switch (type) {
             case "Resource" -> Resource.fromPublication(publication);
@@ -866,13 +944,7 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
     }
 
     private ResourceExpansionService mockedExpansionService() {
-        personRetriever = mock(UriRetriever.class);
-        orgRetriever = mock(UriRetriever.class);
-        when(personRetriever.getRawContent(any(), any())).thenReturn(
-            Optional.of(stringFromResources(Path.of("cristin_person.json"))));
-        when(orgRetriever.getRawContent(any(), any())).thenReturn(
-            Optional.of(stringFromResources(Path.of("organizations/20754.6.0.0.json"))));
-        return new ResourceExpansionServiceImpl(resourceService, ticketService, personRetriever, orgRetriever);
+        return new ResourceExpansionServiceImpl(resourceService, ticketService, fakeUriRetriever, fakeUriRetriever);
     }
 
     @SuppressWarnings("SameParameterValue")
@@ -883,11 +955,13 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         throws ApiGatewayException {
 
         var differentTicketSameType = TicketEntry.requestNewTicket(publication, ticketType)
+                                          .withOwner(UserInstance.fromPublication(publication).getUsername())
                                           .persistNewTicket(ticketService);
         var firstUnexpectedMessage = ExpandedMessage.createEntry(
             messageService.createMessage(differentTicketSameType, owner, randomString()), expansionService);
         var differentTicketType = someOtherTicketTypeBesidesDoiRequest(ticketType);
         var differentTicketDifferentType = TicketEntry.requestNewTicket(publication, differentTicketType)
+                                               .withOwner(UserInstance.fromPublication(publication).getUsername())
                                                .persistNewTicket(ticketService);
         var secondUnexpectedMessage = ExpandedMessage.createEntry(
             messageService.createMessage(differentTicketDifferentType, owner, randomString()), expansionService);
@@ -898,51 +972,17 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         resourceService = getResourceServiceBuilder().build();
         messageService = getMessageService();
         ticketService = getTicketService();
-        personRetriever = mock(UriRetriever.class);
-        orgRetriever = mock(UriRetriever.class);
-        var response = mock(HttpResponse.class);
-        when(response.statusCode()).thenReturn(400);
-        when(personRetriever.fetchResponse(any(), any())).thenReturn(Optional.of(response));
+        fakeUriRetriever = FakeUriRetriever.newInstance();
         expansionService = new ResourceExpansionServiceImpl(resourceService,
                                                             ticketService,
-                                                            personRetriever,
-                                                            orgRetriever);
-
-        when(orgRetriever.getRawContent(any(), any())).thenReturn(
-            Optional.of(stringFromResources(Path.of("organizations/20754.6.0.0.json"))));
+                                                            fakeUriRetriever,
+                                                            fakeUriRetriever);
     }
 
     private Publication persistDraftPublicationWithoutDoi() throws BadRequestException {
-        var publication = randomPublication().copy().withDoi(null).withStatus(DRAFT).build();
+        var publication = randomDegreePublication().copy().withDoi(null).withStatus(DRAFT).build();
         return Resource.fromPublication(publication)
                    .persistNew(resourceService, UserInstance.fromPublication(publication));
-    }
-
-    private DoiRequest toTicketEntry(ExpandedDoiRequest expandedDoiRequest) {
-        DoiRequest doiRequest = new DoiRequest();
-        doiRequest.setCreatedDate(expandedDoiRequest.getCreatedDate());
-        doiRequest.setIdentifier(expandedDoiRequest.identifyExpandedEntry());
-        doiRequest.setCustomerId(expandedDoiRequest.getCustomerId());
-        doiRequest.setModifiedDate(expandedDoiRequest.getModifiedDate());
-        doiRequest.setOwner(expandedDoiRequest.getOwner().username());
-        doiRequest.setResourceIdentifier(expandedDoiRequest.getPublication().getIdentifier());
-        doiRequest.setResourceStatus(expandedDoiRequest.getPublication().getStatus());
-        doiRequest.setStatus(getTicketStatus(expandedDoiRequest.getStatus()));
-        doiRequest.setAssignee(extractUsername(expandedDoiRequest.getAssignee()));
-        return doiRequest;
-    }
-
-    private GeneralSupportRequest toTicketEntry(ExpandedGeneralSupportRequest expandedGeneralSupportRequest) {
-        var ticketEntry = new GeneralSupportRequest();
-        ticketEntry.setModifiedDate(expandedGeneralSupportRequest.getModifiedDate());
-        ticketEntry.setCreatedDate(expandedGeneralSupportRequest.getCreatedDate());
-        ticketEntry.setCustomerId(expandedGeneralSupportRequest.getCustomerId());
-        ticketEntry.setIdentifier(extractIdentifier(expandedGeneralSupportRequest.getId()));
-        ticketEntry.setResourceIdentifier(expandedGeneralSupportRequest.getPublication().getIdentifier());
-        ticketEntry.setStatus(getTicketStatus(expandedGeneralSupportRequest.getStatus()));
-        ticketEntry.setOwner(expandedGeneralSupportRequest.getOwner().username());
-        ticketEntry.setAssignee(extractUsername(expandedGeneralSupportRequest.getAssignee()));
-        return ticketEntry;
     }
 
     private TicketEntry toTicketEntry(ExpandedPublishingRequest expandedPublishingRequest) {
@@ -956,45 +996,11 @@ class ResourceExpansionServiceTest extends ResourcesLocalTest {
         publishingRequest.setStatus(getTicketStatus(expandedPublishingRequest.getStatus()));
         publishingRequest.setFinalizedBy(extractUsername(expandedPublishingRequest.getFinalizedBy()));
         publishingRequest.setAssignee(extractUsername(expandedPublishingRequest.getAssignee()));
-        publishingRequest.setApprovedFiles(extractApprovedFiles(expandedPublishingRequest));
-        publishingRequest.setFilesForApproval(extractFilesForApproval(expandedPublishingRequest));
+        publishingRequest.setApprovedFiles(expandedPublishingRequest.getApprovedFiles());
+        publishingRequest.setFilesForApproval(expandedPublishingRequest.getFilesForApproval());
+        publishingRequest.setOwnerAffiliation(expandedPublishingRequest.getOrganization().id());
+        publishingRequest.setWorkflow(expandedPublishingRequest.getWorkflow());
         return publishingRequest;
-    }
-
-    private UnpublishRequest toTicketEntry(ExpandedUnpublishRequest expandedUnpublishRequest) {
-        var ticketEntry = new UnpublishRequest();
-        ticketEntry.setModifiedDate(expandedUnpublishRequest.getModifiedDate());
-        ticketEntry.setCreatedDate(expandedUnpublishRequest.getCreatedDate());
-        ticketEntry.setCustomerId(expandedUnpublishRequest.getCustomerId());
-        ticketEntry.setIdentifier(expandedUnpublishRequest.identifyExpandedEntry());
-        ticketEntry.setResourceIdentifier(expandedUnpublishRequest.getPublication().getIdentifier());
-        ticketEntry.setStatus(getTicketStatus(expandedUnpublishRequest.getStatus()));
-        ticketEntry.setOwner(expandedUnpublishRequest.getOwner().username());
-        ticketEntry.setAssignee(extractUsername(expandedUnpublishRequest.getAssignee()));
-        return ticketEntry;
-    }
-
-    private TicketEntry toTicketEntry(ExpandedTicket expandedTicket) {
-        return switch (expandedTicket) {
-            case ExpandedDoiRequest expandedDoiRequest -> toTicketEntry(expandedDoiRequest);
-            case ExpandedPublishingRequest expandedPublishingRequest -> toTicketEntry(expandedPublishingRequest);
-            case ExpandedGeneralSupportRequest expandedGeneralSupportRequest ->
-                toTicketEntry(expandedGeneralSupportRequest);
-            case ExpandedUnpublishRequest expandedUnpublishRequest -> toTicketEntry(expandedUnpublishRequest);
-            case null, default -> null;
-        };
-    }
-
-    private Set<FileForApproval> extractFilesForApproval(ExpandedPublishingRequest expandedPublishingRequest) {
-        return expandedPublishingRequest.getFilesForApproval().stream()
-                   .map(FileForApproval::fromFile)
-                   .collect(Collectors.toSet());
-    }
-
-    private static Set<UUID> extractApprovedFiles(ExpandedPublishingRequest expandedPublishingRequest) {
-        return expandedPublishingRequest.getApprovedFiles().stream().map(
-            File::getIdentifier).collect(
-            Collectors.toSet());
     }
 
     private Username extractUsername(ExpandedPerson expandedPerson) {
