@@ -1,23 +1,22 @@
 package no.unit.nva.publication.indexing;
 
-import static java.net.HttpURLConnection.HTTP_NOT_FOUND;
-import static java.net.HttpURLConnection.HTTP_OK;
 import static java.util.Objects.isNull;
+import static java.util.stream.StreamSupport.stream;
 import static no.unit.nva.expansion.ExpansionConfig.objectMapper;
 import static no.unit.nva.expansion.model.ExpandedResource.fromPublication;
+import static no.unit.nva.expansion.utils.PublicationJsonPointers.CONTEXT_TYPE_JSON_PTR;
 import static no.unit.nva.model.PublicationStatus.PUBLISHED;
 import static no.unit.nva.model.testing.PublicationGenerator.randomDoi;
 import static no.unit.nva.model.testing.PublicationGenerator.randomOrganization;
 import static no.unit.nva.model.testing.PublicationGenerator.randomPublication;
 import static no.unit.nva.model.testing.PublicationGenerator.randomUri;
-import static no.unit.nva.publication.indexing.PublicationChannelGenerator.getPublicationChannelSampleJournal;
-import static no.unit.nva.publication.indexing.PublicationChannelGenerator.getPublicationChannelSamplePublisher;
-import static no.unit.nva.publication.indexing.PublicationChannelGenerator.getPublicationChannelSampleSeries;
+import static no.unit.nva.publication.uriretriever.FakeUriResponse.HARD_CODED_TOP_LEVEL_ORG_URI;
 import static no.unit.nva.testutils.RandomDataGenerator.randomInteger;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static nva.commons.apigateway.MediaTypes.APPLICATION_JSON_LD;
-import static nva.commons.core.ioutils.IoUtils.stringFromResources;
+import static nva.commons.core.attempt.Try.attempt;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
 import static org.hamcrest.collection.IsIterableContainingInOrder.contains;
 import static org.hamcrest.core.AllOf.allOf;
@@ -29,48 +28,40 @@ import static org.hamcrest.core.IsNull.nullValue;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.core.JsonPointer;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.collect.Lists;
+import com.google.common.net.MediaType;
 import java.io.IOException;
 import java.net.URI;
-import java.net.http.HttpResponse;
-import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
-import no.unit.nva.api.PublicationResponse;
 import no.unit.nva.expansion.model.ExpandedResource;
 import no.unit.nva.expansion.utils.PublicationJsonPointers;
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.model.Contributor;
-import no.unit.nva.model.Corporation;
 import no.unit.nva.model.Identity;
 import no.unit.nva.model.Organization;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.associatedartifacts.AssociatedLink;
+import no.unit.nva.model.associatedartifacts.RelationType;
 import no.unit.nva.model.contexttypes.Anthology;
 import no.unit.nva.model.contexttypes.Book;
 import no.unit.nva.model.contexttypes.Journal;
 import no.unit.nva.model.contexttypes.Publisher;
 import no.unit.nva.model.contexttypes.Series;
-import no.unit.nva.model.funding.Funding;
-import no.unit.nva.model.funding.FundingBuilder;
+import no.unit.nva.model.funding.ConfirmedFunding;
 import no.unit.nva.model.instancetypes.book.AcademicMonograph;
 import no.unit.nva.model.instancetypes.book.BookAnthology;
 import no.unit.nva.model.instancetypes.book.BookMonograph;
@@ -88,6 +79,7 @@ import no.unit.nva.model.instancetypes.chapter.Introduction;
 import no.unit.nva.model.instancetypes.chapter.NonFictionChapter;
 import no.unit.nva.model.instancetypes.chapter.PopularScienceChapter;
 import no.unit.nva.model.instancetypes.chapter.TextbookChapter;
+import no.unit.nva.model.instancetypes.journal.AcademicArticle;
 import no.unit.nva.model.instancetypes.journal.FeatureArticle;
 import no.unit.nva.model.instancetypes.report.ConferenceReport;
 import no.unit.nva.model.instancetypes.report.ReportBasic;
@@ -100,99 +92,160 @@ import no.unit.nva.model.role.RoleType;
 import no.unit.nva.model.testing.PublicationGenerator;
 import no.unit.nva.model.testing.PublicationInstanceBuilder;
 import no.unit.nva.publication.PublicationServiceConfig;
-import no.unit.nva.publication.external.services.UriRetriever;
+import no.unit.nva.publication.indexing.verification.FundingResult;
+import no.unit.nva.publication.indexing.verification.PublisherResult;
+import no.unit.nva.publication.model.business.Resource;
+import no.unit.nva.publication.model.business.UserInstance;
+import no.unit.nva.publication.service.ResourcesLocalTest;
+import no.unit.nva.publication.service.impl.ResourceService;
+import no.unit.nva.publication.uriretriever.FakeUriResponse;
+import no.unit.nva.publication.uriretriever.FakeUriRetriever;
+import nva.commons.apigateway.exceptions.BadRequestException;
+import nva.commons.apigateway.exceptions.NotFoundException;
 import nva.commons.core.paths.UriWrapper;
+import nva.commons.logutils.LogUtils;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-class ExpandedResourceTest {
+class ExpandedResourceTest extends ResourcesLocalTest {
 
-    public static final String COUNTRY_CODE_NO = "NO";
     public static final String JSON_PTR_TOP_LEVEL_ORGS = "/topLevelOrganizations";
     public static final String JSON_CONTRIBUTOR_ORGANIZATIONS = "/contributorOrganizations";
     public static final String JSON_PTR_ID = "/id";
     public static final String JSON_PTR_HAS_PART = "/hasPart";
-    public static final String CRISTIN_ORG_JSON = "cristin_org.json";
-    public static final String TOP_LEVEL_CRISTIN_ORG_JSON = "cristin_org_top_level.json";
     private static final String SERIES_LEVEL_JSON_PTR =
         "/entityDescription/reference/publicationContext/entityDescription/reference/publicationContext"
-        + "/series/level";
+        + "/series/scientificValue";
     private static final String PUBLISHER_LEVEL_JSON_PTR = "/entityDescription/reference/publicationContext"
                                                            + "/entityDescription/reference/publicationContext"
-                                                           + "/publisher/level";
+                                                           + "/publisher/scientificValue";
+
     private static final String PUBLISHER_ID_JSON_PTR =
         "/entityDescription/reference/publicationContext/entityDescription/reference/publicationContext"
         + "/publisher/id";
     private static final String SERIES_ID_JSON_PTR =
         "/entityDescription/reference/publicationContext/entityDescription/reference/publicationContext"
         + "/series/id";
-    private static final String PUBLISHER_NAME_JSON_PTR = "/entityDescription/reference/publicationContext/publisher"
-                                                          + "/name";
-    private static final String SERIES_NAME_JSON_PTR = "/entityDescription/reference/publicationContext/series/name";
-    private static final String ID_NAMESPACE = System.getenv("ID_NAMESPACE");
     private static final URI HOST_URI = PublicationServiceConfig.PUBLICATION_HOST_URI;
-    private UriRetriever uriRetriever;
+    private FakeUriRetriever fakeUriRetriever;
+    private ResourceService resourceService;
 
     @BeforeEach
     void setup() {
-        this.uriRetriever = mock(UriRetriever.class);
-        when(uriRetriever.getRawContent(any(), any())).thenReturn(Optional.empty());
+        super.init();
+        this.fakeUriRetriever = FakeUriRetriever.newInstance();
+        resourceService = getResourceServiceBuilder().build();
     }
 
     @Test
     void shouldReturnIndexDocumentWithValidReferenceData() throws Exception {
 
         final Publication publication = randomBookWithConfirmedPublisher();
-        final URI seriesUri = extractSeriesId(publication);
-        final URI publisherUri = extractPublisherId(publication);
-        final String publisherName = randomString();
-        final String seriesName = randomString();
-
-        final UriRetriever mockUriRetriever = mock(UriRetriever.class);
-        addPublicationChannelPublisherToMockUriRetriever(mockUriRetriever,
-                                                         seriesUri,
-                                                         seriesName,
-                                                         publisherUri,
-                                                         publisherName);
-
-        final ExpandedResource indexDocument = fromPublication(mockUriRetriever, publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        final ExpandedResource indexDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         final JsonNode framedResultNode = indexDocument.asJsonNode();
 
-        assertEquals(publisherUri.toString(),
-                     framedResultNode.at(PublicationJsonPointers.PUBLISHER_ID_JSON_PTR).textValue());
-        assertEquals(publisherName, framedResultNode.at(PUBLISHER_NAME_JSON_PTR).textValue());
-        assertEquals(seriesUri.toString(), framedResultNode.at(PublicationJsonPointers.SERIES_ID_JSON_PTR).textValue());
-        assertEquals(seriesName, framedResultNode.at(SERIES_NAME_JSON_PTR).textValue());
+        var publisherResultString = framedResultNode.at(PublicationJsonPointers.PUBLISHER_JSON_PTR).toString();
+        var publisher =
+            attempt(() -> objectMapper.readValue(publisherResultString, PublisherResult.class)).orElseThrow();
+
+        assertTrue(publisher.isNotEmpty());
     }
 
     @Test
-    void shouldReturnIndexDocumentWithValidContributorAffiliationCountryCode() throws Exception {
-        var mockUriRetriever = mock(UriRetriever.class);
-        var publication = randomPublication();
-        mockCristinOrganizationRawContentResponse(mockUriRetriever, publication);
+    void shouldReturnIndexDocumentWithContributorsPreviewAndCount() throws Exception {
+        var publication = randomPublication(AcademicArticle.class);
 
-        var indexDocument = fromPublication(mockUriRetriever, publication);
+        var contributor1 = contributorWithSequence(1);
+        var contributor2 = contributorWithSequence(2);
+        var contributor3 = contributorWithSequence(3);
+        var contributor4 = contributorWithSequence(4);
+
+        var contributors = Arrays.asList(contributor1, contributor2, contributor3, contributor4);
+        Collections.shuffle(contributors);
+        var expectedContributors = List.of(contributor1, contributor2, contributor3, contributor4);
+
+        publication.getEntityDescription().setContributors(contributors);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var indexDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         var framedResultNode = indexDocument.asJsonNode();
 
-        var actualCountryCode = framedResultNode.at("/entityDescription/contributors/1/affiliations/0/countryCode")
-                                                .textValue();
-        assertThat(actualCountryCode, is(not(nullValue())));
+        var contributorsPreviewNode = (ArrayNode) framedResultNode.at("/entityDescription")
+                                                      .at("/contributorsPreview");
+
+        var actualContributorsPreview = stream(contributorsPreviewNode.spliterator(), false)
+                                            .map(node -> objectMapper.convertValue(node, Contributor.class))
+                                            .toList();
+
+        assertThat(actualContributorsPreview, is(equalTo(expectedContributors)));
+    }
+
+    @Test
+    void shouldAllowAndLogMissingChannel() throws BadRequestException {
+        final var logger = LogUtils.getTestingAppenderForRootLogger();
+        var publication = randomPublication(AcademicArticle.class);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var channel = ((Journal) resource.getEntityDescription().getReference().getPublicationContext()).getId();
+        fakeUriRetriever.registerResponse(channel, 404, APPLICATION_JSON_LD, "");
+        assertDoesNotThrow(() -> fromPublication(fakeUriRetriever, resourceService, resource));
+        assertThat(logger.getMessages(),
+                   containsString("Request for publication channel <%s> returned 404".formatted(channel)));
+    }
+
+    @Test
+    void shouldReturnIndexDocumentWithContributorsPreviewWithNoMoreThan10Contributors() throws Exception {
+        var publication = randomPublication();
+
+        var contributors = IntStream.range(0, 20)
+                               .mapToObj(i -> contributorWithSequence(randomInteger()))
+                               .toList();
+
+        publication.getEntityDescription().setContributors(contributors);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var indexDocument = fromPublication(fakeUriRetriever, resourceService, resource);
+        var framedResultNode = indexDocument.asJsonNode();
+
+        var contributorsCountNode = (IntNode) framedResultNode.at("/entityDescription")
+                                                  .at("/contributorsCount");
+
+        var contributorsPreviewNode = (ArrayNode) framedResultNode.at("/entityDescription")
+                                                      .at("/contributorsPreview");
+
+        var actualContributorsPreview = stream(contributorsPreviewNode.spliterator(), false)
+                                            .map(node -> objectMapper.convertValue(node, Contributor.class))
+                                            .toList();
+
+        assertThat(actualContributorsPreview.size(), is(equalTo(10)));
+        assertThat(contributorsCountNode.intValue(), is(equalTo(20)));
     }
 
     @Test
     void shouldReturnIndexDocumentWithTopLevelOrganizationsWithTreeToRelevantAffiliation() throws Exception {
-        final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        final var publication = randomPublication(AcademicArticle.class);
+        final var affiliationToBeExpanded = FakeUriResponse.HARD_CODED_LEVEL_3_ORG_URI;
+        var contributorAffiliatedToTopLevel = publication.getEntityDescription().getContributors().getFirst().copy()
+                                                  .withAffiliations(
+                                                      List.of(Organization.fromUri(affiliationToBeExpanded))).build();
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponse(affiliationToBeExpanded, mockUriRetriever);
+        publication.getEntityDescription().setContributors(List.of(contributorAffiliatedToTopLevel));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         var topLevelNodes = (ArrayNode) framedResultNode.at(JSON_PTR_TOP_LEVEL_ORGS);
-        var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, "194.0.0.0");
+        var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, HARD_CODED_TOP_LEVEL_ORG_URI.toString());
 
         assertThat(findDeepestNestedSubUnit(topLevelForExpandedAffiliation).at(JSON_PTR_ID).textValue(),
                    is(equalTo(affiliationToBeExpanded.toString())));
@@ -200,66 +253,49 @@ class ExpandedResourceTest {
 
     @Test
     void shouldReturnIndexDocumentWithContributorsOrganizations() throws Exception {
-        var publication = randomPublication();
-        var contributor1org = orgWithReadableId("contributor1org");
-        var contributor1parentOrg = orgWithReadableId("contributor1parentOrg");
-        var contributor2org = orgWithReadableId("contributor2org");
-        var contributor2parentOrg = orgWithReadableId("contributor2parentOrg");
-        var sharedGrandParent = orgWithReadableId("sharedGrandParent");
+        var publication = randomPublication(AcademicArticle.class);
+        var contributor1org = Organization.fromUri(FakeUriResponse.HARD_CODED_LEVEL_3_ORG_URI);
+        var contributor1parentOrg = Organization.fromUri(FakeUriResponse.HARD_CODED_LEVEL_2_ORG_URI);
+        var contributor2org = Organization.fromUri(FakeUriResponse.constructCristinOrgUri("123.1.2.0"));
+        var topLevelOrg = Organization.fromUri(HARD_CODED_TOP_LEVEL_ORG_URI);
 
         var contributor1 = contributorWithOneAffiliation(contributor1org);
         var contributor2 = contributorWithOneAffiliation(contributor2org);
         publication.getEntityDescription().setContributors(List.of(contributor1, contributor2));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseWithParents(mockUriRetriever,
-                                            contributor1org,
-                                            contributor1parentOrg,
-                                            sharedGrandParent);
-        mockOrganizationResponseWithParents(mockUriRetriever,
-                                            contributor2org,
-                                            contributor2parentOrg,
-                                            sharedGrandParent);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         var contributorOrganizationsNode = framedResultNode.at(JSON_CONTRIBUTOR_ORGANIZATIONS);
         var actualOrganizations = Lists.newArrayList(contributorOrganizationsNode.elements())
-                                       .stream()
-                                       .map(JsonNode::textValue)
-                                       .toList();
+                                      .stream()
+                                      .map(JsonNode::textValue)
+                                      .toList();
 
         var expectedOrganizations = Stream.of(contributor1org,
-                                              contributor2org,
                                               contributor1parentOrg,
-                                              contributor2parentOrg,
-                                              sharedGrandParent).map(Organization::getId).map(URI::toString).toArray();
+                                              topLevelOrg,
+                                              contributor2org).map(Organization::getId).map(URI::toString).toArray();
 
         assertThat(actualOrganizations, containsInAnyOrder(expectedOrganizations));
-    }
-
-    @Test
-    void shouldReturnIndexDocumentEvenIfParsingCristinOrgResponseFails() throws Exception {
-        final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
-
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var nonParseableResponse = randomString();
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, nonParseableResponse);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
-        assertThat(framedResultNode, is(not(nullValue())));
     }
 
     @Test
     void shouldReturnIndexDocumentWithTopLevelOrganizationWithoutHasPartsIfContributorAffiliatedWithTopLevel()
         throws Exception {
         final var publication = randomBookWithConfirmedPublisher();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        final var affiliationToBeExpanded = HARD_CODED_TOP_LEVEL_ORG_URI;
+        var contributorAffiliatedToTopLevel = publication.getEntityDescription().getContributors().getFirst().copy()
+                                                  .withAffiliations(
+                                                      List.of(Organization.fromUri(affiliationToBeExpanded))).build();
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseForTopLevelAffiliation(affiliationToBeExpanded, mockUriRetriever);
+        publication.getEntityDescription().setContributors(List.of(contributorAffiliatedToTopLevel));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         var topLevelNodes = (ArrayNode) framedResultNode.at(JSON_PTR_TOP_LEVEL_ORGS);
         var topLevelForExpandedAffiliation = getTopLevel(topLevelNodes, affiliationToBeExpanded.toString());
 
@@ -270,18 +306,17 @@ class ExpandedResourceTest {
     @Test
     void shouldReturnIndexDocumentWithSortedContributorsByTheirSequence() throws Exception {
         final var publication = randomBookWithManyContributors();
-        final var affiliationToBeExpanded = extractAffiliationsUris(publication).getFirst();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-        mockOrganizationResponseForTopLevelAffiliation(affiliationToBeExpanded, mockUriRetriever);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         var contributorsJson = framedResultNode.at("/entityDescription/contributors");
 
         List<Contributor> contributors = objectMapper.convertValue(contributorsJson,
                                                                    objectMapper.getTypeFactory()
-                                                                               .constructCollectionType(List.class,
-                                                                                                        Contributor.class));
+                                                                       .constructCollectionType(List.class,
+                                                                                                Contributor.class));
         var sortedContributors = contributors.stream().sorted(Comparator.comparing(Contributor::getSequence)).toList();
 
         assertThat(contributors, is(equalTo(sortedContributors)));
@@ -290,10 +325,11 @@ class ExpandedResourceTest {
     @Test
     void shouldReturnIndexDocumentWithIdWhenThereIsNoEntityDescription() throws Exception {
         final var publication = randomPublicationWithoutEntityDescription();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        final var mockUriRetriever = mock(UriRetriever.class);
-
-        var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         var id = URI.create(framedResultNode.at(PublicationJsonPointers.ID_JSON_PTR).textValue());
 
         assertThat(id, is(not(nullValue())));
@@ -302,24 +338,16 @@ class ExpandedResourceTest {
     @Test
     @Deprecated
     void shouldReturnIndexDocumentWithValidFundingSource() throws Exception {
-
         final var publication = randomBookWithConfirmedPublisher();
-        final var sourceUri0 = publication.getFundings().get(0).getSource();
-        final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK, getPublicationSampleFundingSource(sourceUri0));
-
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK, getPublicationSampleFundingSource(sourceUri1));
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
-
-        final var framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        final var framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
         final var extractedSourceId = extractSourceId(framedResultNode);
 
-        assertThat(extractedSourceId, hasItems(sourceUri0, sourceUri1));
+        // TODO: Better test here?
+        assertThat(extractedSourceId.size(), is(equalTo(2)));
     }
 
     @Test
@@ -328,54 +356,47 @@ class ExpandedResourceTest {
         final var publication = randomBookWithConfirmedPublisher();
         final var sourceUri0 = publication.getFundings().get(0).getSource();
         final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                              getPublicationSampleFundingSourceWithoutContext(sourceUri0));
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                               getPublicationSampleFundingSourceWithoutContext(
-                                                                   sourceUri1));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
-
-        assertHasExpectedFundings(sourceUri0, sourceUri1, fromPublication(mockUriRetriever, publication).asJsonNode());
+        assertHasExpectedFundings(sourceUri0, sourceUri1,
+                                  fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode());
     }
 
     @Test
-    void shouldExpandMultipleFundingsWithTheSameSource() throws JsonProcessingException {
+    void shouldExpandMultipleFundingsWithTheSameSource() throws JsonProcessingException, BadRequestException {
         final var publication = randomBookWithConfirmedPublisher();
-        var source = randomUri();
-        publication.setFundings(List.of(fundingWithSource(source), fundingWithSource(source)));
-        final var sourceUri0 = publication.getFundings().get(0).getSource();
-        final var sourceUri1 = publication.getFundings().get(1).getSource();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var firstResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                              getPublicationSampleFundingSourceWithoutContext(sourceUri0));
-        var secondResponse = mockResponseWithStatusCodeAndBody(HTTP_OK,
-                                                               getPublicationSampleFundingSourceWithoutContext(
-                                                                   sourceUri1));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        when(mockUriRetriever.fetchResponse(sourceUri0, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            firstResponse));
-        when(mockUriRetriever.fetchResponse(sourceUri1, APPLICATION_JSON_LD.toString())).thenReturn(Optional.of(
-            secondResponse));
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
+        var type = new TypeReference<List<FundingResult>>() {
+        };
 
-        var expandedResource = fromPublication(mockUriRetriever, publication).asJsonNode();
-
-        assertTrue(expandedResource.at(JsonPointer.compile("/fundings/1/source")).has("id"));
-        assertTrue(expandedResource.at(JsonPointer.compile("/fundings/0/source")).has("id"));
+        var string = expandedResource.at("/fundings").toString();
+        var fundings = attempt(() -> objectMapper.readValue(string, type)).orElseThrow();
+        fundings.forEach(funding -> assertTrue(funding.isNotEmpty()));
     }
 
     @Test
     void shouldReturnIndexDocumentWithValidExpandedFundingSourceWhenFetchFundingReturnNotFound()
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
         final var publication = randomBookWithConfirmedPublisher();
-        final var mockUriRetriever = mock(UriRetriever.class);
-        var httpResponse = mockResponseWithStatusCodeAndBody(HTTP_NOT_FOUND, randomString());
-        when(mockUriRetriever.fetchResponse(any(), anyString())).thenReturn(Optional.of(httpResponse));
-        var expandedResource = fromPublication(mockUriRetriever, publication).asJsonNode();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        int statusCode = 404;
+
+        resource.getFundings().stream()
+            .filter(ConfirmedFunding.class::isInstance)
+            .map(ConfirmedFunding.class::cast)
+            .map(ConfirmedFunding::getSource)
+            .forEach(uri -> {
+                fakeUriRetriever.registerResponse(uri, statusCode, MediaType.ANY_APPLICATION_TYPE, "");
+            });
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
 
         assertTrue(expandedResource.at(JsonPointer.compile("/fundings/1/source")).has("id"));
         assertTrue(expandedResource.at(JsonPointer.compile("/fundings/0/source")).has("id"));
@@ -385,25 +406,17 @@ class ExpandedResourceTest {
     void shouldNotCreateTopLevelOrgForBlankNodes() throws Exception {
 
         final Publication publication = randomBookWithConfirmedPublisher();
-        final URI seriesUri = extractSeriesId(publication);
-        final URI publisherUri = extractPublisherId(publication);
-        final String publisherName = randomString();
-        final String seriesName = randomString();
-
-        final UriRetriever mockUriRetriever = mock(UriRetriever.class);
-        addPublicationChannelPublisherToMockUriRetriever(mockUriRetriever,
-                                                         seriesUri,
-                                                         seriesName,
-                                                         publisherUri,
-                                                         publisherName);
 
         ((Organization) publication.getEntityDescription()
-                                   .getContributors()
-                                   .getFirst()
-                                   .getAffiliations()
-                                   .getFirst()).setId(null);
+                            .getContributors()
+                            .getFirst()
+                            .getAffiliations()
+                            .getFirst()).setId(null);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
-        ObjectNode framedResultNode = fromPublication(mockUriRetriever, publication).asJsonNode();
+        ObjectNode framedResultNode = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
 
         var affiliations = framedResultNode.findValues("affiliations").getFirst();
         affiliations.forEach(aff -> {
@@ -417,45 +430,57 @@ class ExpandedResourceTest {
                               + "identifier. Instance type:{0}")
     @MethodSource("publicationInstanceProvider")
     void shouldReturnDocumentWithIdBasedOnIdNameSpaceAndResourceIdentifier(Class<?> publicationInstance)
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
 
         var publication = PublicationGenerator.randomPublication(publicationInstance);
-        var indexDocument = fromPublication(uriRetriever, publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var indexDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         var json = (ObjectNode) objectMapper.readTree(indexDocument.toJsonString());
-        var expectedUri = UriWrapper.fromUri(HOST_URI).addChild(publication.getIdentifier().toString()).getUri();
+        var expectedUri = UriWrapper.fromUri(HOST_URI).addChild(resource.getIdentifier().toString()).getUri();
         var actualUri = URI.create(json.at(PublicationJsonPointers.ID_JSON_PTR).textValue());
         assertThat(actualUri, is(equalTo(expectedUri)));
     }
 
     @Test
     void shouldReturnIndexDocumentContainingConfirmedSeriesUriFromNsdPublicationChannels()
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
 
         Publication publication = randomBookWithConfirmedPublisher();
         Book book = extractBook(publication);
         Series series = (Series) book.getSeries();
         URI expectedSeriesUri = series.getId();
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         assertThat(actualDocument.getPublicationContextUris(), hasItems(expectedSeriesUri));
     }
 
     @Test
     void shouldReturnIndexDocumentContainingReturnsJournalUriFromNsdPublicationChannels()
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
 
         Publication publication = randomJournalArticleWithConfirmedJournal();
         Journal journal = (Journal) publication.getEntityDescription().getReference().getPublicationContext();
         URI expectedJournalUri = journal.getId();
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         assertThat(actualDocument.getPublicationContextUris(), contains(expectedJournalUri));
     }
 
     @Test
     void shouldReturnIndexDocumentWithConfirmedSeriesIdWhenBookIsPartOfSeriesFoundInNsd()
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, resourceService, resource);
         Book book = extractBook(publication);
         Series confirmedSeries = (Series) book.getSeries();
         URI expectedSeriesId = confirmedSeries.getId();
@@ -467,75 +492,101 @@ class ExpandedResourceTest {
 
     @Test
     void shouldReturnIndexDocumentWithConfirmedJournalIdWhenPublicationIsPublishedInConfirmedJournal()
-        throws JsonProcessingException {
+        throws JsonProcessingException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(FeatureArticle.class);
-        ExpandedResource actualDocument = fromPublication(uriRetriever, publication);
-        Journal journal = extractJournal(publication);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        ExpandedResource actualDocument = fromPublication(fakeUriRetriever, resourceService, resource);
+        Journal journal = extractJournal(resource);
         URI expectedJournalId = journal.getId();
         assertThat(actualDocument.getPublicationContextUris(), containsInAnyOrder(expectedJournalId));
     }
 
     @Test
-    void shouldReturnExpandedResourceWithAnthologyPublicationChannelUrisWhenPublicationIsAcademicChapter()
-        throws JsonProcessingException {
-        var bookAnthology = PublicationGenerator.randomPublication(BookAnthology.class);
-        var academicChapter = createPartOfAnthology(bookAnthology, AcademicChapter.class);
-        mockUriRetrieverPublicationResponse(bookAnthology);
-        var expectedPublicationChannelIds = getPublicationContextUris(extractBook(bookAnthology));
+    void shouldReturnIndexDocumentWithOriginalPublicationContextType()
+        throws JsonProcessingException, BadRequestException {
+        var publication = PublicationGenerator.randomPublication(FeatureArticle.class);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var journal = extractJournal(resource);
+        fakeUriRetriever.registerResponse(journal.getId(), 200, APPLICATION_JSON_LD,
+                                          FakeUriResponse.createSeries(journal.getId()));
+        var actualDocument = fromPublication(fakeUriRetriever, resourceService, resource);
+        var expectedJournalType = journal.getClass().getSimpleName();
+        var actualJournalType = actualDocument.asJsonNode().at(CONTEXT_TYPE_JSON_PTR).textValue();
+        assertEquals(expectedJournalType, actualJournalType);
+    }
 
-        var expandedResource = fromPublication(uriRetriever, academicChapter);
+    @Test
+    void shouldReturnExpandedResourceWithAnthologyPublicationChannelUrisWhenPublicationIsAcademicChapter()
+        throws JsonProcessingException, NotFoundException, BadRequestException {
+        var publication = PublicationGenerator.randomPublication(AcademicChapter.class);
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var parentUri = (Anthology) resource.getEntityDescription().getReference().getPublicationContext();
+        var bookAnthology = resourceService.getPublicationByIdentifier(SortableIdentifier.fromUri(parentUri.getId()));
+        var expectedPublicationChannelIds = getPublicationContextUris(extractBook(bookAnthology));
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource);
         var expandedResourceJsonNode = expandedResource.asJsonNode();
         var actualPublicationChannelUris = extractActualPublicationChannelUris(expandedResourceJsonNode);
         assertThat(actualPublicationChannelUris, containsInAnyOrder(expectedPublicationChannelIds.toArray()));
     }
 
     @Test
-    void shouldNotFailWhenThereIsNoPublicationContext() throws JsonProcessingException {
+    void shouldNotFailWhenThereIsNoPublicationContext() throws JsonProcessingException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        publication.getEntityDescription().getReference().setPublicationContext(null);
-        assertThat(ExpandedResource.fromPublication(uriRetriever, publication), is(not(nullValue())));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        var uriRetriever = FakeUriRetriever.newInstance();
+        FakeUriResponse.setupFakeForType(resource, uriRetriever, resourceService);
+        resource.getEntityDescription().getReference().setPublicationContext(null);
+        assertThat(fromPublication(uriRetriever, resourceService, resource), is(not(nullValue())));
     }
 
     @Test
-    void shouldNotFailWhenThereIsNoPublicationInstance() throws JsonProcessingException {
+    void shouldNotFailWhenThereIsNoPublicationInstance() throws JsonProcessingException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        publication.getEntityDescription().getReference().setPublicationInstance(null);
-        assertThat(ExpandedResource.fromPublication(uriRetriever, publication), is(not(nullValue())));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        var uriRetriever = FakeUriRetriever.newInstance();
+        FakeUriResponse.setupFakeForType(resource, uriRetriever, resourceService);
+        resource.getEntityDescription().getReference().setPublicationInstance(null);
+        assertThat(fromPublication(uriRetriever, resourceService, resource), is(not(nullValue())));
     }
 
     @Test
-    void shouldNotFailWhenThereIsNoMainTitle() throws JsonProcessingException {
+    void shouldNotFailWhenThereIsNoMainTitle() throws JsonProcessingException, BadRequestException {
 
         Publication publication = PublicationGenerator.randomPublication(BookMonograph.class);
-        publication.getEntityDescription().setMainTitle(null);
-        assertThat(ExpandedResource.fromPublication(uriRetriever, publication), is(not(nullValue())));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        resource.getEntityDescription().setMainTitle(null);
+        assertThat(fromPublication(fakeUriRetriever, resourceService, resource), is(not(nullValue())));
     }
 
     @Test
-    void shouldNotFailWhenInputContainsAffiliationsThatAreIncomplete() {
+    void shouldNotFailWhenInputContainsAffiliationsThatAreIncomplete() throws BadRequestException {
         var publication = createPublicationWithEmptyAffiliations();
-        assertDoesNotThrow(() -> ExpandedResource.fromPublication(uriRetriever, publication));
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        assertDoesNotThrow(() -> fromPublication(fakeUriRetriever, resourceService, resource));
     }
 
     @Test
-    void shouldUseApiVersionWhenLookingUpOrganizations() throws JsonProcessingException {
-        var publication = PublicationGenerator.randomPublication();
-        var orgIds = getOrgIdsForContributorAffiliations(publication);
-        ExpandedResource.fromPublication(uriRetriever, publication);
-        orgIds.forEach(orgId -> verify(uriRetriever, times(1)).getRawContent(orgId,
-                                                                             "application/ld+json; "
-                                                                             + "version=2023-05-26"));
-    }
-
-    @Test
-    void shouldNotExpandDoiWhenIdUsedElsewhere() throws IOException {
+    void shouldNotExpandDoiWhenIdUsedElsewhere() throws IOException, BadRequestException {
         var bookAnthology = bookAnthologyWithDoiReferencedInAssociatedLink();
-        mockUriRetrieverResponses(bookAnthology);
-
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        var resource = Resource.fromPublication(bookAnthology)
+                           .persistNew(resourceService, UserInstance.fromPublication(bookAnthology));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource);
 
         var actualDoi = expandedResource.getAllFields().get("doi");
 
@@ -544,39 +595,41 @@ class ExpandedResourceTest {
     }
 
     @Test
-    void shouldNotExpandHandleWhenIdUsedElsewhere() throws IOException {
+    void shouldNotExpandHandleWhenIdUsedElsewhere() throws IOException, BadRequestException {
         var bookAnthology = bookAnthologyWithHandleReferencedInAssociatedLink();
-        mockUriRetrieverResponses(bookAnthology);
-
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        var resource = Resource.fromPublication(bookAnthology)
+                           .persistNew(resourceService, UserInstance.fromPublication(bookAnthology));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource);
 
         var actualHandle = expandedResource.getAllFields().get("handle");
 
         assertThat(actualHandle,
-                   allOf(Matchers.instanceOf(String.class), is((equalTo(bookAnthology.getHandle().toString())))));
+                   allOf(Matchers.instanceOf(String.class), is((equalTo(resource.getHandle().toString())))));
     }
 
     @Test
-    void shouldNotExpandLinkWhenIdUsedElsewhere() throws IOException {
+    void shouldNotExpandLinkWhenIdUsedElsewhere() throws IOException, BadRequestException {
         var bookAnthology = bookAnthologyWithLinkReferencedInAssociatedLink();
-        mockUriRetrieverResponses(bookAnthology);
-
-        var expandedResource = ExpandedResource.fromPublication(uriRetriever, bookAnthology);
+        var resource = Resource.fromPublication(bookAnthology)
+                           .persistNew(resourceService, UserInstance.fromPublication(bookAnthology));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource);
 
         var actualLink = expandedResource.getAllFields().get("link");
 
         assertThat(actualLink,
-                   allOf(Matchers.instanceOf(String.class), is((equalTo(bookAnthology.getLink().toString())))));
+                   allOf(Matchers.instanceOf(String.class), is((equalTo(resource.getLink().toString())))));
     }
 
     @Test
     void shouldReturnExpandedResourceWithAnthologyPublicationChannelLevelWhenPublicationIsAcademicChapter()
-        throws IOException {
-        var bookAnthology = PublicationGenerator.randomPublication(BookAnthology.class);
-        var academicChapter = createPartOfAnthology(bookAnthology, AcademicChapter.class);
-        mockUriRetrieverResponses(bookAnthology);
-
-        var expandedResource = fromPublication(uriRetriever, academicChapter);
+        throws IOException, BadRequestException {
+        var academicChapter = PublicationGenerator.randomPublication(AcademicChapter.class);
+        var resource = Resource.fromPublication(academicChapter)
+                           .persistNew(resourceService, UserInstance.fromPublication(academicChapter));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource);
         var expandedResourceJsonNode = expandedResource.asJsonNode();
         var actualSeriesLevel = expandedResourceJsonNode.at(SERIES_LEVEL_JSON_PTR).textValue();
         var actualPublisherLevel = expandedResourceJsonNode.at(PUBLISHER_LEVEL_JSON_PTR).textValue();
@@ -586,10 +639,12 @@ class ExpandedResourceTest {
 
     @ParameterizedTest
     @MethodSource("validAnthologyContainersProvider")
-    void shouldSetHasPartsRelationForBookAnthology(Class<?> publicationType) throws IOException {
+    void shouldSetHasPartsRelationForBookAnthology(Class<?> publicationType) throws IOException, BadRequestException {
         var bookAnthology = PublicationGenerator.randomPublication(publicationType);
-
-        var expandedResource = fromPublication(uriRetriever, bookAnthology).asJsonNode();
+        var resource = Resource.fromPublication(bookAnthology)
+            .persistNew(resourceService, UserInstance.fromPublication(bookAnthology));
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
 
         var actualNode = expandedResource.get("joinField");
         var expectedNode = new ObjectNode(objectMapper.getNodeFactory());
@@ -600,34 +655,65 @@ class ExpandedResourceTest {
 
     @ParameterizedTest
     @MethodSource("validAnthologyMembersProvider")
-    void shouldSetPartOfRelationForAnthologyMember(Class<?> publicationType) throws IOException {
-        var bookAnthology = PublicationGenerator.randomPublication(BookAnthology.class);
-        mockUriRetrieverResponses(bookAnthology);
-        var publication = createPartOfAnthology(bookAnthology, publicationType);
-
-        var expandedResource = fromPublication(uriRetriever, publication).asJsonNode();
-
+    void shouldSetPartOfRelationForAnthologyMember(Class<?> publicationType) throws IOException, BadRequestException {
+        var part = randomPersistedPublication(publicationType);
+        var publicationContext = (Anthology) part.getEntityDescription().getReference().getPublicationContext();
+        FakeUriResponse.setupFakeForType(part, fakeUriRetriever, resourceService);
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, part).asJsonNode();
         var actualNode = expandedResource.get("joinField");
         var expectedNode = new ObjectNode(objectMapper.getNodeFactory());
         expectedNode.put("name", "partOf");
-        expectedNode.put("parent", bookAnthology.getIdentifier().toString());
+        expectedNode.put("parent", SortableIdentifier.fromUri(publicationContext.getId()).toString());
 
         assertThat(actualNode, is(equalTo(expectedNode)));
+    }
+
+    @Test
+    void shouldUseApiVersionWhenLookingUpOrganizations() throws JsonProcessingException, BadRequestException {
+        var publication = PublicationGenerator.randomPublication();
+        var resource = Resource.fromPublication(publication)
+                           .persistNew(resourceService, UserInstance.fromPublication(publication));
+        var uriRetriever = FakeUriRetriever.newInstance();
+        FakeUriResponse.setupFakeForType(resource, uriRetriever, resourceService);
+        var versionedType = MediaType.parse("application/ld+json; version=2023-05-26");
+        resource.getEntityDescription().getContributors().stream()
+            .map(Contributor::getAffiliations)
+            .flatMap(i -> i.stream().map(Organization.class::cast).map(Organization::getId))
+            .forEach(uri -> {
+                var responseBody = """
+                    {
+                      "@context": "https://bibsysdev.github.io/src/organization-context.json",
+                      "id": "%s",
+                      "type": "Organization",
+                      "labels": {
+                        "en": "Happy duck"
+                      }
+                    }""".formatted(uri);
+                uriRetriever.registerResponse(uri,
+                                              200,
+                                              versionedType,
+                                              responseBody);
+            });
+
+        var actual = fromPublication(uriRetriever, resourceService, resource).toJsonString();
+        assertThat(actual, containsString("Happy duck"));
     }
 
     @ParameterizedTest
     @MethodSource("validAnthologyMembersProvider")
     void shouldNotFailWhenAnthologyParentIsMissing(Class<?> publicationType)
-        throws IOException {
-        var bookAnthology = PublicationGenerator.randomPublication(BookAnthology.class);
-        mockUriRetrieverResponses(bookAnthology);
-        var publication = createPartOfAnthology(bookAnthology, publicationType);
+        throws IOException, BadRequestException {
+        var academicChapter = PublicationGenerator.randomPublication(publicationType);
+        var resource = Resource.fromPublication(academicChapter)
+                           .persistNew(resourceService, UserInstance.fromPublication(academicChapter));
+        var context = (Anthology) resource.getEntityDescription().getReference().getPublicationContext();
+
+        FakeUriResponse.setupFakeForType(resource, fakeUriRetriever, resourceService);
 
         // Remove the publication context ID to simulate a publication that is missing the parent reference
-        var context = (Anthology) publication.getEntityDescription().getReference().getPublicationContext();
         context.setId(null);
 
-        var expandedResource = fromPublication(uriRetriever, publication).asJsonNode();
+        var expandedResource = fromPublication(fakeUriRetriever, resourceService, resource).asJsonNode();
 
         var actualNode = expandedResource.get("joinField");
         var expectedNode = new ObjectNode(objectMapper.getNodeFactory());
@@ -637,60 +723,35 @@ class ExpandedResourceTest {
         assertThat(actualNode, is(equalTo(expectedNode)));
     }
 
-    private static void mockOrganizationResponseWithParents(UriRetriever uriRetriever,
-                                                            Organization org,
-                                                            Organization parentOrg,
-                                                            Organization grandParentOrg) {
-        mockGetRawContentResponse(uriRetriever,
-                                  org.getId(),
-                                  getCristinResponseWithNestedPartOfsForOrganization(org.getId().toString(),
-                                                                                     parentOrg.getId().toString(),
-                                                                                     grandParentOrg.getId()
-                                                                                                   .toString()));
-    }
-
     private static Contributor contributorWithOneAffiliation(Organization contributor1org) {
         return new Contributor.Builder().withIdentity(new Identity.Builder().withName(randomString()).build())
-                                        .withRole(new RoleType(Role.ACTOR))
-                                        .withSequence(randomInteger(10000))
-                                        .withAffiliations(List.of(contributor1org))
-                                        .build();
+                   .withRole(new RoleType(Role.ACTOR))
+                   .withSequence(randomInteger(10000))
+                   .withAffiliations(List.of(contributor1org))
+                   .build();
     }
 
-    private static HttpResponse mockResponseWithStatusCodeAndBody(int statusCode, String body) {
-        var firstResponse = mock(HttpResponse.class);
-        when(firstResponse.statusCode()).thenReturn(statusCode);
-        when(firstResponse.body()).thenReturn(body);
-        return firstResponse;
-    }
-
-    private static Funding fundingWithSource(URI source) {
-        return new FundingBuilder().withId(randomUri()).withSource(source).build();
-    }
-
-    private static Publication createPartOfAnthology(Publication bookAnthology, Class<?> typeKey) {
-        var bookAnthologyUri = toPublicationId(bookAnthology.getIdentifier());
-        var childPublication = PublicationGenerator.randomPublication(typeKey);
-        var anthology = (Anthology) childPublication.getEntityDescription().getReference().getPublicationContext();
-        anthology.setId(bookAnthologyUri);
-        return childPublication;
+    private static Contributor contributorWithSequence(int sequence) {
+        return new Contributor.Builder().withIdentity(new Identity.Builder().withName(randomString()).build())
+                   .withSequence(sequence)
+                   .build();
     }
 
     private static Stream<Class<?>> validAnthologyContainersProvider() {
         return Stream.of(
-                AcademicMonograph.class,
-                NonFictionMonograph.class,
-                PopularScienceMonograph.class,
-                Textbook.class,
-                Encyclopedia.class,
-                ExhibitionCatalog.class,
-                BookAnthology.class,
-                ReportResearch.class,
-                ReportPolicy.class,
-                ReportWorkingPaper.class,
-                ReportBookOfAbstract.class,
-                ConferenceReport.class,
-                ReportBasic.class);
+            AcademicMonograph.class,
+            NonFictionMonograph.class,
+            PopularScienceMonograph.class,
+            Textbook.class,
+            Encyclopedia.class,
+            ExhibitionCatalog.class,
+            BookAnthology.class,
+            ReportResearch.class,
+            ReportPolicy.class,
+            ReportWorkingPaper.class,
+            ReportBookOfAbstract.class,
+            ConferenceReport.class,
+            ReportBasic.class);
     }
 
     private static Stream<Class<?>> validAnthologyMembersProvider() {
@@ -706,39 +767,10 @@ class ExpandedResourceTest {
     }
 
     private static JsonNode getTopLevel(ArrayNode topLevelNodes, String topLevelOrgId) {
-        return StreamSupport.stream(topLevelNodes.spliterator(), false)
-                            .filter(node -> node.at(JSON_PTR_ID).textValue().contains(topLevelOrgId))
-                            .findFirst()
-                            .orElse(null);
-    }
-
-    private static void mockOrganizationResponse(URI affiliationToBeExpanded, UriRetriever mockUriRetriever) {
-        var mockedCristinResponse = stringFromResources(Path.of(CRISTIN_ORG_JSON)).replace("__REPLACE_AFFILIATION_ID__",
-                                                                                           affiliationToBeExpanded.toString());
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, mockedCristinResponse);
-    }
-
-    private static void mockOrganizationResponseForTopLevelAffiliation(URI affiliationToBeExpanded,
-                                                                       UriRetriever mockUriRetriever) {
-        var mockedCristinResponse = stringFromResources(Path.of(TOP_LEVEL_CRISTIN_ORG_JSON)).replace(
-            "__REPLACE_AFFILIATION_ID__",
-            affiliationToBeExpanded.toString());
-        mockGetRawContentResponse(mockUriRetriever, affiliationToBeExpanded, mockedCristinResponse);
-    }
-
-    private static void mockCristinOrganizationRawContentResponse(UriRetriever mockUriRetriever,
-                                                                  Publication publication) {
-        publication.getEntityDescription()
-                   .getContributors()
-                   .stream()
-                   .flatMap(contributor -> contributor.getAffiliations().stream())
-                   .filter(Organization.class::isInstance)
-                   .map(Organization.class::cast)
-                   .map(Organization::getId)
-                   .forEach(id -> mockGetRawContentResponse(mockUriRetriever,
-                                                            id,
-                                                            getCristinResponseWithCountryCodeForOrganization(id.toString(),
-                                                                                                             COUNTRY_CODE_NO)));
+        return stream(topLevelNodes.spliterator(), false)
+                   .filter(node -> node.at(JSON_PTR_ID).textValue().contains(topLevelOrgId))
+                   .findFirst()
+                   .orElse(null);
     }
 
     private static void assertHasExpectedFundings(URI sourceUri0, URI sourceUri1, ObjectNode framedResultNode) {
@@ -754,27 +786,12 @@ class ExpandedResourceTest {
 
     private static Set<URI> extractSourceId(ObjectNode framedResultNode) {
         return framedResultNode.at(PublicationJsonPointers.FUNDING_SOURCE_POINTER)
-                               .findValues("source")
-                               .stream()
-                               .flatMap(node -> node.findValues("id").stream())
-                               .map(JsonNode::textValue)
-                               .map(URI::create)
-                               .collect(Collectors.toSet());
-    }
-
-    private static void addPublisherToMockUriRetriever(UriRetriever uriRetriever, URI publisherId) throws IOException {
-        var publicationChannelSamplePublisher = getPublicationChannelSamplePublisher(publisherId, randomString());
-        mockGetRawContentResponse(uriRetriever, publisherId, publicationChannelSamplePublisher);
-    }
-
-    private static void addSeriesToMockUriRetriever(UriRetriever uriRetriever, URI seriesId) throws IOException {
-
-        var publicationChannelSampleSeries = getPublicationChannelSampleSeries(seriesId, randomString());
-        mockGetRawContentResponse(uriRetriever, seriesId, publicationChannelSampleSeries);
-    }
-
-    private static void mockGetRawContentResponse(UriRetriever uriRetriever, URI uri, String response) {
-        when(uriRetriever.getRawContent(eq(uri), any())).thenReturn(Optional.of(response));
+                   .findValues("source")
+                   .stream()
+                   .flatMap(node -> node.findValues("id").stream())
+                   .map(JsonNode::textValue)
+                   .map(URI::create)
+                   .collect(Collectors.toSet());
     }
 
     private static List<URI> extractActualPublicationChannelUris(ObjectNode expandedResourceJsonNode) {
@@ -785,135 +802,15 @@ class ExpandedResourceTest {
 
     private static Contributor createContributorsWithEmptyAffiliations(Contributor contributor) {
         return new Contributor.Builder().withIdentity(contributor.getIdentity())
-                                        .withAffiliations(List.of(new Organization()))
-                                        .withRole(contributor.getRole())
-                                        .withSequence(contributor.getSequence())
-                                        .withCorrespondingAuthor(contributor.isCorrespondingAuthor())
-                                        .build();
-    }
-
-    private static void addPublicationChannelPublisherToMockUriRetriever(UriRetriever mockUriRetriever,
-                                                                         URI journalId,
-                                                                         String journalName,
-                                                                         URI publisherId,
-                                                                         String publisherName) throws IOException {
-
-        mockGetRawContentResponse(mockUriRetriever,
-                                  journalId,
-                                  getPublicationChannelSampleJournal(journalId, journalName));
-        mockGetRawContentResponse(mockUriRetriever,
-                                  publisherId,
-                                  getPublicationChannelSamplePublisher(publisherId, publisherName));
-    }
-
-    private static String getCristinResponseWithCountryCodeForOrganization(String id, String countryCode) {
-        return "{\n"
-               + "  \"@context\": \"https://bibsysdev.github.io/src/organization-context.json\",\n"
-               + "  \"type\": \"Organization\",\n"
-               + "  \"id\": \""
-               + id
-               + "\",\n"
-               + "  \"labels\": {\n"
-               + "    \"en\": \"Department of Something\",\n"
-               + "    \"nb\": \"Institutt for Noe\"\n"
-               + "  },\n"
-               + "  \"country\": \""
-               + countryCode
-               + "\"\n"
-               + "}";
-    }
-
-    private static String getCristinResponseWithNestedPartOfsForOrganization(String id,
-                                                                             String parentOrgId,
-                                                                             String topOrgId) {
-        return "{\n"
-               + "  \"@context\" : \"https://bibsysdev.github.io/src/organization-context.json\",\n"
-               + "  \"type\" : \"Organization\",\n"
-               + "  \"id\": \""
-               + id
-               + "\",\n"
-               + "  \"labels\" : {\n"
-               + "    \"en\" : \"Office of International Relations\",\n"
-               + "    \"nb\" : \"Internasjonal seksjon\"\n"
-               + "  },\n"
-               + "  \"acronym\" : \"UTD-ST-INT\",\n"
-               + "  \"country\" : \"NO\",\n"
-               + "  \"partOf\" : [ {\n"
-               + "    \"type\" : \"Organization\",\n"
-               + "    \"id\": \""
-               + parentOrgId
-               + "\",\n"
-               + "    \"partOf\" : [ {\n"
-               + "      \"type\" : \"Organization\",\n"
-               + "      \"id\": \""
-               + topOrgId
-               + "\"\n"
-               + "    } ]\n"
-               + "  } ]\n"
-               + "}";
-    }
-
-    private static String getPublicationSampleFundingSource(URI sourceId) {
-        return "{\n"
-               + "  \"@context\": {\n"
-               + "    \"@vocab\": \"https://nva.sikt.no/ontology/publication#\",\n"
-               + "    \"id\": \"@id\",\n"
-               + "    \"type\": \"@type\",\n"
-               + "    \"name\": {\n"
-               + "      \"@id\": \"label\",\n"
-               + "      \"@container\": \"@language\"\n"
-               + "    }\n"
-               + "  },\n"
-               + "  \"type\" : \"FundingSource\",\n"
-               + "  \"id\" : \""
-               + sourceId
-               + "\",\n"
-               + "  \"identifier\" : \"NFR\",\n"
-               + "  \"name\" : {\n"
-               + "    \"en\" : \"Research Council of Norway (RCN)\",\n"
-               + "    \"nb\" : \"Norges forskningsråd\"\n"
-               + "  }\n"
-               + "}";
-    }
-
-    private static String getPublicationSampleFundingSourceWithoutContext(URI sourceId) {
-        return "{\n"
-               + "  \"type\" : \"FundingSource\",\n"
-               + "  \"id\" : \""
-               + sourceId
-               + "\",\n"
-               + "  \"identifier\" : \"NFR\",\n"
-               + "  \"name\" : {\n"
-               + "    \"en\" : \"Research Council of Norway (RCN)\",\n"
-               + "    \"nb\" : \"Norges forskningsråd\"\n"
-               + "  }\n"
-               + "}";
+                   .withAffiliations(List.of(new Organization()))
+                   .withRole(contributor.getRole())
+                   .withSequence(contributor.getSequence())
+                   .withCorrespondingAuthor(contributor.isCorrespondingAuthor())
+                   .build();
     }
 
     private static Stream<Class<?>> publicationInstanceProvider() {
         return PublicationInstanceBuilder.listPublicationInstanceTypes().stream();
-    }
-
-    private static URI toPublicationId(SortableIdentifier identifier) {
-        return UriWrapper.fromUri(ID_NAMESPACE).addChild(identifier.toString()).getUri();
-    }
-
-    private static Set<URI> getOrgIdsForContributorAffiliations(Publication publication) {
-        return publication.getEntityDescription()
-                          .getContributors()
-                          .stream()
-                          .map(Contributor::getAffiliations)
-                          .map(ExpandedResourceTest::getOrgIds)
-                          .flatMap(Set::stream)
-                          .collect(Collectors.toSet());
-    }
-
-    private static Set<URI> getOrgIds(List<Corporation> organizations) {
-        return organizations.stream()
-                            .filter(Organization.class::isInstance)
-                            .map(Organization.class::cast)
-                            .map(Organization::getId)
-                            .collect(Collectors.toSet());
     }
 
     private static JsonNode findDeepestNestedSubUnit(JsonNode jsonNode) {
@@ -932,61 +829,45 @@ class ExpandedResourceTest {
     }
 
     private static boolean hasPartHasContent(JsonNode jsonNode) {
-        return !jsonNode.at(JSON_PTR_HAS_PART).isEmpty() || !isBlankJsonNode(jsonNode.at(JSON_PTR_HAS_PART));
+        var node = jsonNode.at(JSON_PTR_HAS_PART);
+        return !node.isMissingNode() && node.isArray() && !node.isEmpty();
     }
 
     private static boolean isBlankJsonNode(JsonNode jsonNode) {
         return jsonNode.isMissingNode();
     }
 
-    private Organization orgWithReadableId(String readable) {
-        return new Organization.Builder().withId(URI.create(("https://example.org/" + readable))).build();
+    private Publication randomPersistedPublication(Class<?> publicationType) throws BadRequestException {
+        var publication = PublicationGenerator.randomPublication(publicationType);
+        return Resource.fromPublication(publication).persistNew(resourceService,
+                                                                UserInstance.fromPublication(publication));
     }
 
     private Publication bookAnthologyWithDoiReferencedInAssociatedLink() {
         var doi = randomDoi();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withDoi(doi)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(doi, null, null)))
-                                   .build();
+                   .copy()
+                   .withDoi(doi)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(doi, null, null, RelationType.SAME_AS)))
+                   .build();
     }
 
     private Publication bookAnthologyWithHandleReferencedInAssociatedLink() {
         var handle = randomUri();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withHandle(handle)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(handle, null, null)))
-                                   .build();
+                   .copy()
+                   .withHandle(handle)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(handle, null, null, RelationType.SAME_AS)))
+                   .build();
     }
 
     private Publication bookAnthologyWithLinkReferencedInAssociatedLink() {
         var link = randomUri();
         return PublicationGenerator.randomPublication(BookAnthology.class)
-                                   .copy()
-                                   .withLink(link)
-                                   .withAssociatedArtifacts(List.of(new AssociatedLink(link, null, null)))
-                                   .build();
-    }
-
-    private void mockUriRetrieverResponses(Publication bookAnthology) throws IOException {
-        mockUriRetrieverPublicationChannelResponses(bookAnthology);
-        mockUriRetrieverPublicationResponse(bookAnthology);
-    }
-
-    private void mockUriRetrieverPublicationChannelResponses(Publication bookAnthology) throws IOException {
-        var seriesId = extractSeriesId(bookAnthology);
-        var publisherId = extractPublisherId(bookAnthology);
-        addSeriesToMockUriRetriever(uriRetriever, seriesId);
-        addPublisherToMockUriRetriever(uriRetriever, publisherId);
-    }
-
-    private void mockUriRetrieverPublicationResponse(Publication publication) throws JsonProcessingException {
-        var publicationId = toPublicationId(publication.getIdentifier());
-        var publicationResponse = PublicationResponse.fromPublication(publication);
-        publicationResponse.setId(publicationId);
-        mockGetRawContentResponse(uriRetriever, publicationId, objectMapper.writeValueAsString(publicationResponse));
+                   .copy()
+                   .withLink(link)
+                   .withAssociatedArtifacts(List.of(new AssociatedLink(link, null, null, RelationType.SAME_AS)))
+                   .build();
     }
 
     private List<URI> getPublicationContextUris(Book book) {
@@ -998,47 +879,19 @@ class ExpandedResourceTest {
     }
 
     private Publication createPublicationWithEmptyAffiliations() {
-        var publication = PublicationGenerator.randomPublication();
+        var publication = PublicationGenerator.randomPublication(AcademicArticle.class);
         publication.setStatus(PUBLISHED);
         var entityDescription = publication.getEntityDescription();
         var contributors = entityDescription.getContributors()
-                                            .stream()
-                                            .map(ExpandedResourceTest::createContributorsWithEmptyAffiliations)
-                                            .collect(Collectors.toList());
+                               .stream()
+                               .map(ExpandedResourceTest::createContributorsWithEmptyAffiliations)
+                               .toList();
         entityDescription.setContributors(contributors);
         return publication;
     }
 
     private Journal extractJournal(Publication publication) {
         return (Journal) publication.getEntityDescription().getReference().getPublicationContext();
-    }
-
-    private URI extractPublisherId(Publication publication) {
-        Book book = extractBook(publication);
-        Publisher publisher = extractPublisher(book);
-        return publisher.getId();
-    }
-
-    private Publisher extractPublisher(Book book) {
-        return (Publisher) book.getPublisher();
-    }
-
-    private List<URI> extractAffiliationsUris(Publication publication) {
-        return publication.getEntityDescription()
-                          .getContributors()
-                          .stream()
-                          .flatMap(contributor -> contributor.getAffiliations()
-                                                             .stream()
-                                                             .filter(Organization.class::isInstance)
-                                                             .map(Organization.class::cast)
-                                                             .map(Organization::getId))
-                          .collect(Collectors.toList());
-    }
-
-    private URI extractSeriesId(Publication publication) {
-        Book book = extractBook(publication);
-        Series confirmedSeries = (Series) book.getSeries();
-        return confirmedSeries.getId();
     }
 
     private Book extractBook(Publication publication) {
@@ -1061,17 +914,17 @@ class ExpandedResourceTest {
 
     private Contributor randomContributor() {
         return new Contributor.Builder().withIdentity(new Identity.Builder().withName(randomString()).build())
-                                        .withRole(new RoleType(Role.ACTOR))
-                                        .withSequence(randomInteger(10000))
-                                        .withAffiliations(List.of(randomOrganization()))
-                                        .build();
+                   .withRole(new RoleType(Role.ACTOR))
+                   .withSequence(randomInteger(10000))
+                   .withAffiliations(List.of(randomOrganization()))
+                   .build();
     }
 
     private Publication randomBookWithManyContributors() {
         var publication = PublicationGenerator.randomPublication(BookMonograph.class);
         var contributions = IntStream.rangeClosed(1, 10)
-                                     .mapToObj(i -> randomContributor())
-                                     .collect(Collectors.toList());
+                                .mapToObj(i -> randomContributor())
+                                .toList();
         publication.getEntityDescription().setContributors(contributions);
         return publication;
     }
