@@ -10,11 +10,11 @@ import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.Username;
+import no.unit.nva.publication.external.services.RawContentRetriever;
 import no.unit.nva.publication.external.services.UriRetriever;
 import no.unit.nva.publication.model.business.Message;
 import no.unit.nva.publication.model.business.TicketEntry;
@@ -27,13 +27,13 @@ import no.unit.nva.publication.model.storage.TicketDao;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.apigateway.exceptions.ConflictException;
-import nva.commons.apigateway.exceptions.ForbiddenException;
 import nva.commons.apigateway.exceptions.NotFoundException;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.core.attempt.FunctionWithException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+@SuppressWarnings({"PMD.CouplingBetweenObjects"})
 public class TicketService extends ServiceWithTransactions {
 
     private static final Logger logger = LoggerFactory.getLogger(TicketService.class);
@@ -45,13 +45,13 @@ public class TicketService extends ServiceWithTransactions {
     private final ResourceService resourceService;
     private final String tableName;
 
-    public TicketService(AmazonDynamoDB client, UriRetriever uriRetriever) {
+    public TicketService(AmazonDynamoDB client, RawContentRetriever uriRetriever) {
         this(client, DEFAULT_IDENTIFIER_PROVIDER, uriRetriever);
     }
 
     protected TicketService(AmazonDynamoDB client,
                             Supplier<SortableIdentifier> identifierProvider,
-                            UriRetriever uriRetriever) {
+                            RawContentRetriever uriRetriever) {
         super(client);
         this.identifierProvider = identifierProvider;
         tableName = RESOURCES_TABLE_NAME;
@@ -95,44 +95,40 @@ public class TicketService extends ServiceWithTransactions {
                    .orElseThrow(TicketService::notFoundException);
     }
 
-    public TicketEntry fetchTicket(TicketEntry dataEntry)
-        throws NotFoundException {
+    public TicketEntry fetchTicket(TicketEntry dataEntry) throws NotFoundException {
         return fetchTicket(UserInstance.fromTicket(dataEntry), dataEntry.getIdentifier());
     }
 
     //TODO: should not return anything because we cannot return the persisted entry after a PUT
     // and right now we are returning the input object.
-    public TicketEntry updateTicketStatus(TicketEntry ticketEntry, TicketStatus ticketStatus, Username finalizedBy)
+    public TicketEntry updateTicketStatus(TicketEntry ticketEntry, TicketStatus ticketStatus, UserInstance userInstance)
         throws ApiGatewayException {
-        switch (ticketStatus) {
-            case COMPLETED:
-                return completeTicket(ticketEntry, finalizedBy);
-            case CLOSED:
-                return closeTicket(ticketEntry, finalizedBy);
-            default:
-                throw new BadRequestException("Cannot update to status " + ticketStatus);
-        }
+        return switch (ticketStatus) {
+            case COMPLETED -> completeTicket(ticketEntry, userInstance);
+            case CLOSED -> closeTicket(ticketEntry, userInstance);
+            default -> throw new BadRequestException("Cannot update to status " + ticketStatus);
+        };
     }
 
     public <T extends TicketEntry> Optional<T> fetchTicketByResourceIdentifier(URI customerId,
                                                                                SortableIdentifier resourceIdentifier,
                                                                                Class<T> ticketType) {
 
-        TicketDao dao = (TicketDao) TicketEntry.createQueryObject(customerId, resourceIdentifier, ticketType).toDao();
+        TicketDao dao = TicketEntry.createQueryObject(customerId, resourceIdentifier, ticketType).toDao();
         return dao.fetchByResourceIdentifier(getClient()).map(Dao::getData).map(ticketType::cast);
     }
 
     public List<Message> fetchTicketMessages(TicketEntry ticketEntry) {
-        var dao = (TicketDao) ticketEntry.toDao();
+        var dao = ticketEntry.toDao();
         return dao.fetchTicketMessages(getClient())
                    .map(MessageDao::getData)
                    .map(Message.class::cast)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     public TicketEntry refreshTicket(TicketEntry ticket) {
         var refreshedTicket = ticket.refresh();
-        var dao = (TicketDao) refreshedTicket.toDao();
+        var dao = refreshedTicket.toDao();
         getClient().putItem(dao.createPutItemRequest());
         return refreshedTicket;
     }
@@ -169,7 +165,7 @@ public class TicketService extends ServiceWithTransactions {
         var existingTicket = fetchTicketByIdentifier(ticketEntry.getIdentifier());
         var updatedAssignee = existingTicket.updateAssignee(publication, assignee);
 
-        var dao = (TicketDao) updatedAssignee.toDao();
+        var dao = updatedAssignee.toDao();
         var putItemRequest = dao.createPutItemRequest();
         getClient().putItem(putItemRequest);
         return updatedAssignee;
@@ -185,28 +181,25 @@ public class TicketService extends ServiceWithTransactions {
         }
     }
 
-    protected TicketEntry completeTicket(TicketEntry ticketEntry, Username username) throws ApiGatewayException {
+    protected TicketEntry completeTicket(TicketEntry ticketEntry, UserInstance userInstance) throws ApiGatewayException {
         var publication = resourceService.getPublicationByIdentifier(ticketEntry.getResourceIdentifier());
-        var existingTicket =
-            attempt(() -> fetchTicketByIdentifier(ticketEntry.getIdentifier()))
-                .or(() -> fetchByResourceIdentifierForLegacyDoiRequestsAndPublishingRequests(ticketEntry))
-                .orElseThrow(fail -> notFoundException());
-        injectAssigneeWhenUnassigned(existingTicket, username);
-        var completed = attempt(() -> existingTicket.complete(publication, username))
+        var existingTicket = fetchTicket(ticketEntry);
+        injectAssigneeWhenUnassigned(existingTicket, userInstance);
+        var completed = attempt(() -> existingTicket.complete(publication, userInstance))
                             .orElseThrow(fail -> handlerTicketUpdateFailure(fail.getException()));
 
-        var putItemRequest = ((TicketDao) completed.toDao()).createPutItemRequest();
+        var putItemRequest = completed.toDao().createPutItemRequest();
         getClient().putItem(putItemRequest);
         return completed;
     }
 
-    protected TicketEntry closeTicket(TicketEntry pendingTicket, Username username) throws ApiGatewayException {
+    protected TicketEntry closeTicket(TicketEntry pendingTicket, UserInstance userInstance) throws ApiGatewayException {
         //TODO: can we get both entries at the same time using the single table design?
         resourceService.getPublicationByIdentifier(pendingTicket.getResourceIdentifier());
         var persistedTicket = fetchTicketByIdentifier(pendingTicket.getIdentifier());
-        var closedTicket = persistedTicket.close(username);
-        injectAssigneeWhenUnassigned(closedTicket, username);
-        var dao = (TicketDao) closedTicket.toDao();
+        var closedTicket = persistedTicket.close(userInstance);
+        injectAssigneeWhenUnassigned(closedTicket, userInstance);
+        var dao = closedTicket.toDao();
         var putItemRequest = dao.createPutItemRequest();
         getClient().putItem(putItemRequest);
         return closedTicket;
@@ -220,9 +213,9 @@ public class TicketService extends ServiceWithTransactions {
         return new NotFoundException(TICKET_NOT_FOUND);
     }
 
-    private void injectAssigneeWhenUnassigned(TicketEntry ticketEntry, Username username) {
+    private void injectAssigneeWhenUnassigned(TicketEntry ticketEntry, UserInstance userInstance) {
         if (isUnassigned(ticketEntry)) {
-            ticketEntry.setAssignee(username);
+            ticketEntry.setAssignee(new Username(userInstance.getUsername()));
         }
     }
 
@@ -230,17 +223,9 @@ public class TicketService extends ServiceWithTransactions {
         return new BadRequestException(exception.getMessage(), exception);
     }
 
-    //TODO: should try to fetch ticket only by ticket identifier
-    private TicketEntry fetchByResourceIdentifierForLegacyDoiRequestsAndPublishingRequests(TicketEntry ticketEntry) {
-        return fetchTicketByResourceIdentifier(ticketEntry.getCustomerId(),
-                                               ticketEntry.getResourceIdentifier(),
-                                               ticketEntry.getClass()).orElseThrow();
-    }
-
-    private Publication fetchPublicationToEnsureItExists(TicketEntry ticketEntry) throws ForbiddenException {
-        var userInstance = UserInstance.create(ticketEntry.getOwner(), ticketEntry.getCustomerId());
-        return attempt(() -> resourceService.getPublication(userInstance, ticketEntry.getResourceIdentifier()))
-                   .orElseThrow(fail -> new ForbiddenException());
+    private Publication fetchPublicationToEnsureItExists(TicketEntry ticketEntry) {
+        return attempt(() -> resourceService.getPublicationByIdentifier(ticketEntry.getResourceIdentifier()))
+                   .orElseThrow();
     }
 
     private <T extends TicketEntry> T createTicketForPublication(Publication publication,
