@@ -1,6 +1,7 @@
 package no.unit.nva.publication.model.storage;
 
 import static no.unit.nva.hamcrest.DoesNotHaveEmptyValues.doesNotHaveEmptyValues;
+import static no.unit.nva.model.testing.PublicationGenerator.randomDegreePublication;
 import static no.unit.nva.model.testing.PublicationGenerator.randomPublication;
 import static no.unit.nva.publication.model.business.StorageModelTestUtils.randomPublishingRequest;
 import static no.unit.nva.publication.model.storage.ResourceDao.CRISTIN_SOURCE;
@@ -13,16 +14,15 @@ import com.amazonaws.services.dynamodbv2.model.PutItemRequest;
 import java.time.Instant;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.identifiers.SortableIdentifier;
-import no.unit.nva.model.additionalidentifiers.AdditionalIdentifier;
-import no.unit.nva.model.additionalidentifiers.AdditionalIdentifierBase;
 import no.unit.nva.model.ImportDetail;
 import no.unit.nva.model.ImportSource;
 import no.unit.nva.model.ImportSource.Source;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.PublicationStatus;
+import no.unit.nva.model.additionalidentifiers.AdditionalIdentifier;
+import no.unit.nva.model.additionalidentifiers.AdditionalIdentifierBase;
 import no.unit.nva.publication.TestDataSource;
 import no.unit.nva.publication.model.business.DoiRequest;
 import no.unit.nva.publication.model.business.Message;
@@ -31,6 +31,7 @@ import no.unit.nva.publication.model.business.TicketEntry;
 import no.unit.nva.publication.model.business.UserInstance;
 import no.unit.nva.publication.testing.TypeProvider;
 import nva.commons.core.attempt.Try;
+import org.junit.jupiter.api.Named;
 
 public final class DaoUtils extends TestDataSource {
 
@@ -58,20 +59,23 @@ public final class DaoUtils extends TestDataSource {
 
     public static DoiRequestDao doiRequestDao() {
         var publication = randomPublicationEligibleForDoiRequest();
-        var doiRequest = DoiRequest.fromPublication(publication);
+        var doiRequest = DoiRequest.create(Resource.fromPublication(publication), UserInstance.fromPublication(publication));
         return new DoiRequestDao(doiRequest);
     }
 
     public static DoiRequestDao doiRequestDao(ResourceDao resourceDao) {
         var resource = (Resource) resourceDao.getData();
-        var doiRequest = DoiRequest.newDoiRequestForResource(resource);
+        var userInstance = UserInstance.fromPublication(resource.toPublication());
+        var doiRequest = DoiRequest.create(resource, userInstance);
         return new DoiRequestDao(doiRequest);
     }
 
     @SuppressWarnings("unchecked")
     public static Class<? extends TicketEntry> randomTicketType() {
         return (Class<? extends TicketEntry>)
-                   randomElement(TypeProvider.listSubTypes(TicketEntry.class).collect(Collectors.toList()));
+                   randomElement(TypeProvider.listSubTypes(TicketEntry.class)
+                                     .map(Named::getPayload)
+                                     .toList());
     }
 
     static PutItemRequest toPutItemRequest(Dao resource) {
@@ -80,14 +84,14 @@ public final class DaoUtils extends TestDataSource {
     }
 
     private static Publication randomPublicationEligibleForDoiRequest() {
-        return randomPublication().copy()
+        return randomDegreePublication().copy()
                    .withStatus(PublicationStatus.DRAFT)
                    .withDoi(null)
                    .build();
     }
 
     private static PublishingRequestDao sampleApprovePublishingRequestDao() {
-        var publishingRequest = randomPublishingRequest();
+        var publishingRequest = randomPublishingRequest().withOwner(randomString());
         return (PublishingRequestDao) publishingRequest.toDao();
     }
 
@@ -101,6 +105,7 @@ public final class DaoUtils extends TestDataSource {
 
     private static TicketEntry randomTicket(Publication publication) {
         return attempt(() -> TicketEntry.createNewTicket(publication, randomTicketType(), SortableIdentifier::next))
+                   .map(ticketEntry -> ticketEntry.withOwner(randomString()))
                    .orElseThrow();
     }
 }
