@@ -1,5 +1,6 @@
 package no.unit.nva.publication.model.storage;
 
+import static no.unit.nva.model.testing.PublicationGenerator.randomDegreePublication;
 import static no.unit.nva.model.testing.PublicationGenerator.randomPublication;
 import static no.unit.nva.publication.storage.model.DatabaseConstants.RESOURCES_TABLE_NAME;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
@@ -11,7 +12,6 @@ import com.amazonaws.services.dynamodbv2.model.PutItemRequest;
 import com.amazonaws.services.dynamodbv2.model.QueryRequest;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.model.Organization;
@@ -19,6 +19,7 @@ import no.unit.nva.model.Publication;
 import no.unit.nva.model.PublicationStatus;
 import no.unit.nva.model.ResourceOwner;
 import no.unit.nva.model.Username;
+import no.unit.nva.model.instancetypes.degree.DegreeBachelor;
 import no.unit.nva.publication.model.business.Entity;
 import no.unit.nva.publication.model.business.Message;
 import no.unit.nva.publication.model.business.Resource;
@@ -28,11 +29,13 @@ import no.unit.nva.publication.service.ResourcesLocalTest;
 import no.unit.nva.publication.testing.TypeProvider;
 import nva.commons.core.attempt.Try;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
 class WithPrimaryKeyTest extends ResourcesLocalTest {
-    
+
+    @Override
     @BeforeEach
     public void init() {
         super.init();
@@ -43,9 +46,9 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
     @MethodSource("createUnpersistedEntities")
     void primaryKeyPartitionKeyConditionReturnsQueryConditionForListingAllEntriesOfSpecificTypeForASingleUser(
         List<Entity> entities) {
-        var daos = entities.stream().map(Entity::toDao).collect(Collectors.toList());
+        var daos = entities.stream().map(Entity::toDao).toList();
         daos.forEach(this::insertToDb);
-        WithPrimaryKey queryObject = daos.get(0);
+        WithPrimaryKey queryObject = daos.getFirst();
         
         var result = performQuery(queryObject);
         var expectedItems = daos.toArray(Object[]::new);
@@ -60,7 +63,7 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
     }
     
     private static List<Message> sampleMessages() {
-        return sampleTickets().stream().flatMap(WithPrimaryKeyTest::randomMessages).collect(Collectors.toList());
+        return sampleTickets().stream().flatMap(WithPrimaryKeyTest::randomMessages).toList();
     }
     
     private static Stream<Message> randomMessages(TicketEntry ticket) {
@@ -80,7 +83,7 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
                    .map(publication -> publication.withPublisher(commonPublisher))
                    .map(Publication.Builder::build)
                    .map(Resource::fromPublication)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private static Username randomUsername() {
@@ -88,7 +91,7 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
     }
 
     private static Publication draftPublicationWithoutDoi() {
-        return randomPublication().copy().withDoi(null).withStatus(PublicationStatus.DRAFT).build();
+        return randomDegreePublication().copy().withDoi(null).withStatus(PublicationStatus.DRAFT).build();
     }
     
     private static List<TicketEntry> sampleTickets() {
@@ -107,11 +110,13 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
     
     private static List<TicketEntry> createUnpersistedTicketEntries(Resource resource) {
         return TypeProvider.listSubTypes(TicketEntry.class)
+                   .map(Named::getPayload)
                    .map(ticketType -> (Class<TicketEntry>) ticketType)
                    .map(attempt(ticketType -> TicketEntry.createNewTicket(resource.toPublication(), ticketType,
                        SortableIdentifier::next)))
                    .map(Try::orElseThrow)
-                   .collect(Collectors.toList());
+                   .map(ticketEntry -> ticketEntry.withOwner(UserInstance.fromPublication(resource.toPublication()).getUsername()))
+                   .toList();
     }
 
     private List<? extends WithPrimaryKey> performQuery(WithPrimaryKey queryObject) {
@@ -124,7 +129,7 @@ class WithPrimaryKeyTest extends ResourcesLocalTest {
                    .getItems()
                    .stream()
                    .map(item -> DynamoEntry.parseAttributeValuesMap(item, Dao.class))
-                   .collect(Collectors.toList());
+                   .toList();
     }
     
     private QueryRequest createQuery(WithPrimaryKey queryObject) {
